--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_nb.properties
@@ -1,25 +1,60 @@
 a-duration-time-is-required=Det kreves en varigheten. (Automatic Translation)
 a-name-is-required=Det kreves et navn. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=En SERVICENIVÅAVTALE med samme navn finnes allerede. (Automatic Translation)
+cancel=Avbryt (Automatic Translation)
 check-sla-job-interval=Sjekke SLA jobb intervall (Automatic Translation)
 check-sla-job-interval-description=Angi jobb intervallet i minutter. (Automatic Translation)
+days=Dager (Automatic Translation)
+days-abbreviation=d (Automatic Translation)
+define-a-duration-time-to-be-met=Definere en varigheten skal oppfylles. (Automatic Translation)
+delete=Slette (Automatic Translation)
+deleting-slas-will-reflect-on-report-data=Slette SLAs gjenspeiler rapportdata. Denne handlingen kan ikke angres. Er du sikker på at du vil slette den? (Automatic Translation)
+description=Beskrivelse (Automatic Translation)
+duration=Varighet (Automatic Translation)
+duration-time=Varigheten (Automatic Translation)
+edit=Rediger (Automatic Translation)
+enter-a-whole-number=Skriv inn et heltall. (Automatic Translation)
+enter-at-least-one-of-the-following-fields=Angi minst ett av feltene nedenfor. (Automatic Translation)
 entries=Oppføringer (Automatic Translation)
+error=Feil: (Automatic Translation)
+hours=Timer (Automatic Translation)
+hours-abbreviation=h (Automatic Translation)
+hours-must-be-between=Timer må være mellom 00:00 og 24:00. (Automatic Translation)
+instances-in-this-process-are-being-updated-according-to-sla-changes=Forekomster i denne prosessen oppdateres etter SLA endringer. (Automatic Translation)
 items=Elementer (Automatic Translation)
 metrics=Beregninger (Automatic Translation)
+minutes=Minutter (Automatic Translation)
+minutes-abbreviation=min (Automatic Translation)
+name=navn (Automatic Translation)
+new-sla=Nye SLA (Automatic Translation)
 next=Neste (Automatic Translation)
 no-current-metrics=Ingen gjeldende beregninger (Automatic Translation)
+no-current-slas=Ingen gjeldende SLAs (Automatic Translation)
 no-results-were-found=Fant ingen resultater. (Automatic Translation)
 on-time=Tid (Automatic Translation)
 once-there-are-active-processes-metrics-will-appear-here=En gang det aktive prosesser, vil beregninger vises her. (Automatic Translation)
 open-processes-summary=Åpne prosesser Sammendrag (Automatic Translation)
 overdue=Forfalt (Automatic Translation)
+please-enter-at-least-one-of-the-fields=Angi minst ett av feltene. (Automatic Translation)
+please-fill-in-the-required-fields=Fyll ut de nødvendige feltene. (Automatic Translation)
+please-try-another-name=Prøv et annet navn. (Automatic Translation)
 previous=Tidligere (Automatic Translation)
 process-name=Prosessnavnet (Automatic Translation)
+reports=Rapporter (Automatic Translation)
+save=Lagre (Automatic Translation)
 search-for=Søk etter... (Automatic Translation)
+set-up-slas=Definere SLAs (Automatic Translation)
 showing=Viser (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+sla-definition=SLA definisjon (Automatic Translation)
+sla-name=SLA navn (Automatic Translation)
+sla-was-deleted=SLA ble slettet. (Automatic Translation)
+slas=SLAer (Automatic Translation)
 the-job-interval-must-be-greater-than-0=Jobb intervallet må være større enn 0. (Automatic Translation)
 total-open=Totalt åpen (Automatic Translation)
+total-pending=Totalt antall ventende (Automatic Translation)
+updating=Oppdatering: (Automatic Translation)
+value-must-be-an-integer-above-x=Value must be an integer above {0}. (Automatic Copy)
 workflow-metrics-configuration-name=Arbeidsflyt beregninger (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
