--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ru.properties
@@ -1,25 +1,60 @@
 a-duration-time-is-required=Продолжительность времени не требуется. (Automatic Translation)
 a-name-is-required=Имя является обязательным. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=ОАС с тем же именем уже существует. (Automatic Translation)
+cancel=Отмена (Automatic Translation)
 check-sla-job-interval=Проверьте интервал задания ОАС (Automatic Translation)
 check-sla-job-interval-description=Установите интервал задания в минутах. (Automatic Translation)
+days=Дней (Automatic Translation)
+days-abbreviation=d (Automatic Translation)
+define-a-duration-time-to-be-met=Определите продолжительность времени быть выполнены. (Automatic Translation)
+delete=Удалить (Automatic Translation)
+deleting-slas-will-reflect-on-report-data=Удаление SLA будет отражать на данные отчета. Это действие нельзя отменить. Вы уверены, что вы хотите удалить его? (Automatic Translation)
+description=Описание (Automatic Translation)
+duration=Продолжительность (Automatic Translation)
+duration-time=Длительность (Automatic Translation)
+edit=Редактировать (Automatic Translation)
+enter-a-whole-number=Введите целое число. (Automatic Translation)
+enter-at-least-one-of-the-following-fields=Введите по крайней мере один из следующих полей. (Automatic Translation)
 entries=Записи (Automatic Translation)
+error=Ошибка: (Automatic Translation)
+hours=Часы (Automatic Translation)
+hours-abbreviation=h (Automatic Translation)
+hours-must-be-between=Часы должны быть между 00:00 и 24:00. (Automatic Translation)
+instances-in-this-process-are-being-updated-according-to-sla-changes=Экземпляры в этом процессе обновляется согласно изменениям ОАС. (Automatic Translation)
 items=Элементы (Automatic Translation)
 metrics=Метрики (Automatic Translation)
+minutes=Минут (Automatic Translation)
+minutes-abbreviation=мин (Automatic Translation)
+name=Имя (Automatic Translation)
+new-sla=Новые ОАС (Automatic Translation)
 next=Следующая (Automatic Translation)
 no-current-metrics=Нет текущих метрики (Automatic Translation)
+no-current-slas=Нет текущего обслуживания (Automatic Translation)
 no-results-were-found=Результаты не найдены. (Automatic Translation)
 on-time=На время (Automatic Translation)
 once-there-are-active-processes-metrics-will-appear-here=Когда есть активные процессы, метрики появится здесь. (Automatic Translation)
 open-processes-summary=Резюме открытых процессов (Automatic Translation)
 overdue=Просроченные (Automatic Translation)
+please-enter-at-least-one-of-the-fields=Пожалуйста, введите по крайней мере одно из полей. (Automatic Translation)
+please-fill-in-the-required-fields=Пожалуйста, заполните обязательные поля. (Automatic Translation)
+please-try-another-name=Пожалуйста, попробуйте другое имя. (Automatic Translation)
 previous=Предыдущий (Automatic Translation)
 process-name=Имя процесса (Automatic Translation)
+reports=Доклады (Automatic Translation)
+save=Сохранить (Automatic Translation)
 search-for=Поиск по... (Automatic Translation)
+set-up-slas=Настройка обслуживания (Automatic Translation)
 showing=Показаны (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+sla-definition=Определение ОАС (Automatic Translation)
+sla-name=Имя ОАС (Automatic Translation)
+sla-was-deleted=ОАС был удален. (Automatic Translation)
+slas=SLA (Automatic Translation)
 the-job-interval-must-be-greater-than-0=Интервал задания должны быть больше 0. (Automatic Translation)
 total-open=Полного Открытый (Automatic Translation)
+total-pending=Всего ожидающих (Automatic Translation)
+updating=Обновление: (Automatic Translation)
+value-must-be-an-integer-above-x=Value must be an integer above {0}. (Automatic Copy)
 workflow-metrics-configuration-name=Метрик рабочих процессов (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
