--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_sk.properties
@@ -1,25 +1,60 @@
 a-duration-time-is-required=Čas trvania je potrebné. (Automatic Translation)
 a-name-is-required=Meno je povinné. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=SLA s rovnakým názvom už existuje. (Automatic Translation)
+cancel=Zrušiť (Automatic Translation)
 check-sla-job-interval=Kontrolovať SLA prácu Interval (Automatic Translation)
 check-sla-job-interval-description=Nastaviť prácu interval v minútach. (Automatic Translation)
+days=Dní (Automatic Translation)
+days-abbreviation=d (Automatic Translation)
+define-a-duration-time-to-be-met=Definovať čas trvania splnené. (Automatic Translation)
+delete=Vymazať lokalitu (Automatic Translation)
+deleting-slas-will-reflect-on-report-data=Odstránenie SLA budú odrážať na správu údajov. Túto akciu nemožno vrátiť späť. Naozaj chcete natrvalo odstrániť? (Automatic Translation)
+description=Popis (Automatic Translation)
+duration=Trvanie (Automatic Translation)
+duration-time=Čas trvania (Automatic Translation)
+edit=Upraviť (Automatic Translation)
+enter-a-whole-number=Zadajte celé číslo. (Automatic Translation)
+enter-at-least-one-of-the-following-fields=Zadajte aspoň jeden z týchto oblastí. (Automatic Translation)
 entries=Položky (Automatic Translation)
+error=Chyba: (Automatic Translation)
+hours=Hodín (Automatic Translation)
+hours-abbreviation=h (Automatic Translation)
+hours-must-be-between=Hodín musí byť medzi 00:00 do 24:00. (Automatic Translation)
+instances-in-this-process-are-being-updated-according-to-sla-changes=Inštancie v tomto procese sú aktualizované podľa zmien SLA. (Automatic Translation)
 items=Položky (Automatic Translation)
 metrics=Metriky (Automatic Translation)
+minutes=Minút (Automatic Translation)
+minutes-abbreviation=min (Automatic Translation)
+name=meno (Automatic Translation)
+new-sla=Nové SLA (Automatic Translation)
 next=Ďalší (Automatic Translation)
 no-current-metrics=Žiadne aktuálne metriky (Automatic Translation)
+no-current-slas=Žiadne aktuálne SLA (Automatic Translation)
 no-results-were-found=Neboli nájdené žiadne výsledky. (Automatic Translation)
 on-time=Na čas (Automatic Translation)
 once-there-are-active-processes-metrics-will-appear-here=Akonáhle tam sú aktívne procesy, metriky sa zobrazia tu. (Automatic Translation)
 open-processes-summary=Otvorené procesy Zhrnutie (Automatic Translation)
 overdue=Po termíne (Automatic Translation)
+please-enter-at-least-one-of-the-fields=Zadajte aspoň jedno z polí. (Automatic Translation)
+please-fill-in-the-required-fields=Vyplňte požadované polia. (Automatic Translation)
+please-try-another-name=Skúste iný názov. (Automatic Translation)
 previous=Predchádzajúce (Automatic Translation)
 process-name=Názov procesu (Automatic Translation)
+reports=Správy (Automatic Translation)
+save=Uložiť (Automatic Translation)
 search-for=Hľadanie... (Automatic Translation)
+set-up-slas=Nastaviť SLA (Automatic Translation)
 showing=Zobrazuje sa (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+sla-definition=Definícia SLA (Automatic Translation)
+sla-name=SLA meno (Automatic Translation)
+sla-was-deleted=SLA bola odstránená. (Automatic Translation)
+slas=SLA (Automatic Translation)
 the-job-interval-must-be-greater-than-0=Interval úlohy musí byť väčšia ako 0. (Automatic Translation)
 total-open=Celkom otvorené (Automatic Translation)
+total-pending=Celkový počet čakajúcich (Automatic Translation)
+updating=Aktualizácia: (Automatic Translation)
+value-must-be-an-integer-above-x=Value must be an integer above {0}. (Automatic Copy)
 workflow-metrics-configuration-name=Workflow metriky (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
