--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ar.properties
@@ -1,25 +1,60 @@
 a-duration-time-is-required=وقت مدة المطلوبة. (Automatic Translation)
 a-name-is-required=اسم مطلوب. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=اتفاقية مستوى الخدمة بنفس الاسم موجود مسبقاً. (Automatic Translation)
+cancel=إلغاء الأمر (Automatic Translation)
 check-sla-job-interval=التحقق من جيش تحرير السودان وظيفة الفاصل الزمني (Automatic Translation)
 check-sla-job-interval-description=تعيين الفاصل الزمني للعمل في غضون دقائق. (Automatic Translation)
+days=أيام (Automatic Translation)
+days-abbreviation=د (Automatic Translation)
+define-a-duration-time-to-be-met=تحديد وقت مدة أن تتحقق. (Automatic Translation)
+delete=حذف (Automatic Translation)
+deleting-slas-will-reflect-on-report-data=حذف مستوى الخدمة سينعكس على بيانات التقرير. لا يمكن التراجع عن هذا الإجراء. هل أنت متأكد من أنك تريد حذفه نهائياً؟ (Automatic Translation)
+description=الوصف (Automatic Translation)
+duration=المدة (Automatic Translation)
+duration-time=المدة الزمنية (Automatic Translation)
+edit=تحرير (Automatic Translation)
+enter-a-whole-number=أدخل رقماً صحيحاً. (Automatic Translation)
+enter-at-least-one-of-the-following-fields=قم بإدخال واحد على الأقل من الحقول التالية. (Automatic Translation)
 entries=إدخالات (Automatic Translation)
+error=خطأ: (Automatic Translation)
+hours=ساعات (Automatic Translation)
+hours-abbreviation=ح (Automatic Translation)
+hours-must-be-between=يجب أن تكون ساعات بين 00:00 و 24:00. (Automatic Translation)
+instances-in-this-process-are-being-updated-according-to-sla-changes=ويجري تحديث الحالات في هذه العملية وفقا للتغييرات جيش تحرير السودان. (Automatic Translation)
 items=العناصر (Automatic Translation)
 metrics=المقاييس (Automatic Translation)
+minutes=دقيقة (Automatic Translation)
+minutes-abbreviation=دقيقة (Automatic Translation)
+name=الاسم (Automatic Translation)
+new-sla=جيش تحرير السودان الجديد (Automatic Translation)
 next=القادم (Automatic Translation)
 no-current-metrics=لا المقاييس الحالية (Automatic Translation)
+no-current-slas=لا يوجد مستوى الخدمة الحالية (Automatic Translation)
 no-results-were-found=تم العثور على أية نتائج. (Automatic Translation)
 on-time=في الموعد (Automatic Translation)
 once-there-are-active-processes-metrics-will-appear-here=عندما تكون هناك عمليات نشطة، سوف تظهر المقاييس هنا. (Automatic Translation)
 open-processes-summary=ملخص العمليات المفتوحة (Automatic Translation)
 overdue=تأخر (Automatic Translation)
+please-enter-at-least-one-of-the-fields=الرجاء إدخال واحد على الأقل من الحقول. (Automatic Translation)
+please-fill-in-the-required-fields=الرجاء ملء الحقول المطلوبة. (Automatic Translation)
+please-try-another-name=الرجاء محاولة اسم آخر. (Automatic Translation)
 previous=السابقة (Automatic Translation)
 process-name=اسم العملية (Automatic Translation)
+reports=التقارير (Automatic Translation)
+save=حفظ (Automatic Translation)
 search-for=البحث عن... (Automatic Translation)
+set-up-slas=إعداد مستوى الخدمة (Automatic Translation)
 showing=عرض (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+sla-definition=تعريف اتفاقية مستوى الخدمة (Automatic Translation)
+sla-name=اسم جيش تحرير السودان (Automatic Translation)
+sla-was-deleted=تم حذف جيش تحرير السودان. (Automatic Translation)
+slas=مستوى الخدمة (Automatic Translation)
 the-job-interval-must-be-greater-than-0=يجب أن يكون الفاصل الزمني وظيفة أكبر من 0. (Automatic Translation)
 total-open=فتح إجمالي (Automatic Translation)
+total-pending=مجموع معلقة (Automatic Translation)
+updating=تحديث: (Automatic Translation)
+value-must-be-an-integer-above-x=Value must be an integer above {0}. (Automatic Copy)
 workflow-metrics-configuration-name=مقاييس سير العمل (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
