--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_bg.properties
@@ -1,25 +1,60 @@
 a-duration-time-is-required=Продължителност време е необходимо. (Automatic Translation)
 a-name-is-required=Името е задължително. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=SLA със същото име вече съществува. (Automatic Translation)
+cancel=Отказ (Automatic Translation)
 check-sla-job-interval=Проверете SLA работа интервал (Automatic Translation)
 check-sla-job-interval-description=Задаване на работа интервал в минути. (Automatic Translation)
+days=Дни (Automatic Translation)
+days-abbreviation=d (Automatic Translation)
+define-a-duration-time-to-be-met=Определите продължителност време да бъдат изпълнени. (Automatic Translation)
+delete=Изтриване (Automatic Translation)
+deleting-slas-will-reflect-on-report-data=Изтриване на SLAs ще се отрази на отчетните данни. Това действие не може да бъде отменено. Наистина ли искате да я изтриете завинаги? (Automatic Translation)
+description=Описание (Automatic Translation)
+duration=Продължителност (Automatic Translation)
+duration-time=Времетраене време (Automatic Translation)
+edit=Редактиране (Automatic Translation)
+enter-a-whole-number=Въведете цяло число. (Automatic Translation)
+enter-at-least-one-of-the-following-fields=Въведете поне едно от следните полета. (Automatic Translation)
 entries=Записи (Automatic Translation)
+error=Грешка: (Automatic Translation)
+hours=Часа (Automatic Translation)
+hours-abbreviation=h (Automatic Translation)
+hours-must-be-between=Часа трябва да бъде между 00:00 и 24:00 часа. (Automatic Translation)
+instances-in-this-process-are-being-updated-according-to-sla-changes=Случаи в този процес се актуализират според промените SLA. (Automatic Translation)
 items=Елементи (Automatic Translation)
 metrics=Показатели (Automatic Translation)
+minutes=Минути (Automatic Translation)
+minutes-abbreviation=мин (Automatic Translation)
+name=Име (Automatic Translation)
+new-sla=Нови SLA (Automatic Translation)
 next=Следваща (Automatic Translation)
 no-current-metrics=Няма текущи показатели (Automatic Translation)
+no-current-slas=Няма текущи SLAs (Automatic Translation)
 no-results-were-found=Не са намерени резултати. (Automatic Translation)
 on-time=Навреме (Automatic Translation)
 once-there-are-active-processes-metrics-will-appear-here=След като има активни процеси, показатели ще се появят тук. (Automatic Translation)
 open-processes-summary=Отвори процеси Резюме (Automatic Translation)
 overdue=Просрочени (Automatic Translation)
+please-enter-at-least-one-of-the-fields=Моля, въведете поне едно от полетата. (Automatic Translation)
+please-fill-in-the-required-fields=Моля попълнете задължителните полета. (Automatic Translation)
+please-try-another-name=Моля опитайте с друго име. (Automatic Translation)
 previous=Предишна (Automatic Translation)
 process-name=Име на процес (Automatic Translation)
+reports=Доклади (Automatic Translation)
+save=Запиши (Automatic Translation)
 search-for=Търсене за... (Automatic Translation)
+set-up-slas=Настроите SLAs (Automatic Translation)
 showing=Показване (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+sla-definition=SLA дефиниция (Automatic Translation)
+sla-name=Име на SLA (Automatic Translation)
+sla-was-deleted=SLA е изтрит. (Automatic Translation)
+slas=SLAs (Automatic Translation)
 the-job-interval-must-be-greater-than-0=Интервалът на работа трябва да бъде по-голямо от 0. (Automatic Translation)
 total-open=Общо отворено (Automatic Translation)
+total-pending=Общо чакащи (Automatic Translation)
+updating=Актуализиране: (Automatic Translation)
+value-must-be-an-integer-above-x=Value must be an integer above {0}. (Automatic Copy)
 workflow-metrics-configuration-name=Показателите за работен поток (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
