--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ca.properties
@@ -1,25 +1,60 @@
 a-duration-time-is-required=Cal especificar una durada.
 a-name-is-required=Cal un nom.
 an-sla-with-the-same-name-already-exists=Ja existeix un SLA amb el mateix nom.
+cancel=Cancel·la (Automatic Translation)
 check-sla-job-interval=Comprovar SLA feina Interval (Automatic Translation)
 check-sla-job-interval-description=Configurar l'interval de feina en minuts. (Automatic Translation)
+days=Dies (Automatic Translation)
+days-abbreviation=d (Automatic Translation)
+define-a-duration-time-to-be-met=Definir un moment de durada per complir. (Automatic Translation)
+delete=Suprimir (Automatic Translation)
+deleting-slas-will-reflect-on-report-data=Suprimint SLAs reflexionarà sobre dades d'informe. Aquesta acció no es pot desfer. Esteu segur que voleu suprimir-la permanentment? (Automatic Translation)
+description=Descripció (Automatic Translation)
+duration=Durada (Automatic Translation)
+duration-time=Temps de durada (Automatic Translation)
+edit=Editar (Automatic Translation)
+enter-a-whole-number=Introduïu un número Enter. (Automatic Translation)
+enter-at-least-one-of-the-following-fields=Introduir com a mínim un dels següents camps. (Automatic Translation)
 entries=Entrades
+error=Error: (Automatic Translation)
+hours=Hores (Automatic Translation)
+hours-abbreviation=h (Automatic Translation)
+hours-must-be-between=Ha de ser de 00:00 a 24:00 hores. (Automatic Translation)
+instances-in-this-process-are-being-updated-according-to-sla-changes=Exemples en aquest procés estan actualitzant segons la SLA canvis. (Automatic Translation)
 items=Elements
 metrics=Analítica web
+minutes=Minuts (Automatic Translation)
+minutes-abbreviation=min (Automatic Translation)
+name=Nom (Automatic Translation)
+new-sla=SLA nou (Automatic Translation)
 next=Següent
 no-current-metrics=No hi ha analítica actual
+no-current-slas=No es registren els actuals (Automatic Translation)
 no-results-were-found=No s'ha trobat cap resultat.
 on-time=Puntual
 once-there-are-active-processes-metrics-will-appear-here=Quan hi hagi processos actius, l'analítica apareixerà aquí.
 open-processes-summary=Obre el resum de processos
 overdue=Amb retard
+please-enter-at-least-one-of-the-fields=Introduir com a mínim un dels camps. (Automatic Translation)
+please-fill-in-the-required-fields=Empleneu els camps obligatoris. (Automatic Translation)
+please-try-another-name=Proveu-ne un altre. (Automatic Translation)
 previous=Anterior
 process-name=Nom del procés
+reports=Informes (Automatic Translation)
+save=Desa (Automatic Translation)
 search-for=Cerca...
+set-up-slas=Establir acords (Automatic Translation)
 showing=Mostrant
 showing-x-to-x-of-x-entries=Mostrant de la {0} a la {1} de {2} entrades.
+sla-definition=Definició de SLA (Automatic Translation)
+sla-name=Nom de el SLA (Automatic Translation)
+sla-was-deleted=SLA s'ha suprimit. (Automatic Translation)
+slas=Es registren els (Automatic Translation)
 the-job-interval-must-be-greater-than-0=L'interval de feina ha de ser major que 0. (Automatic Translation)
 total-open=Total obert
+total-pending=Total pendent (Automatic Translation)
+updating=Actualització: (Automatic Translation)
+value-must-be-an-integer-above-x=Value must be an integer above {0}. (Automatic Copy)
 workflow-metrics-configuration-name=Indicadors de flux de treball (Automatic Translation)
 x-item={0} Elements
 x-items={0} Elements
