--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_cs.properties
@@ -1,25 +1,60 @@
 a-duration-time-is-required=Doba trvání je vyžadován. (Automatic Translation)
 a-name-is-required=Je požadován název. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=SLA se stejným názvem již existuje. (Automatic Translation)
+cancel=Zrušit (Automatic Translation)
 check-sla-job-interval=Zkontrolujte Interval úlohy SLA (Automatic Translation)
 check-sla-job-interval-description=Nastavte interval úlohy v minutách. (Automatic Translation)
+days=Dny (Automatic Translation)
+days-abbreviation=d (Automatic Translation)
+define-a-duration-time-to-be-met=Definujte dobu trvání musí být splněny. (Automatic Translation)
+delete=Odstranit (Automatic Translation)
+deleting-slas-will-reflect-on-report-data=Odstranění rozsahu bude odrážet na data sestavy. Tuto akci nelze vrátit zpět. Opravdu že chcete trvale odstranit? (Automatic Translation)
+description=Popis (Automatic Translation)
+duration=Doba trvání (Automatic Translation)
+duration-time=Doba trvání (Automatic Translation)
+edit=Úpravy (Automatic Translation)
+enter-a-whole-number=Zadejte celé číslo. (Automatic Translation)
+enter-at-least-one-of-the-following-fields=Zadejte alespoň jedno z následujících polí. (Automatic Translation)
 entries=Položky (Automatic Translation)
+error=Chyba: (Automatic Translation)
+hours=Hodin (Automatic Translation)
+hours-abbreviation=h (Automatic Translation)
+hours-must-be-between=Hodiny musí být od 00:00 do 24:00. (Automatic Translation)
+instances-in-this-process-are-being-updated-according-to-sla-changes=Instance v tomto procesu jsou aktualizovány podle změn stavu SLA. (Automatic Translation)
 items=Položky (Automatic Translation)
 metrics=Metriky (Automatic Translation)
+minutes=Minut (Automatic Translation)
+minutes-abbreviation=min (Automatic Translation)
+name=Jméno (Automatic Translation)
+new-sla=Nové SLA (Automatic Translation)
 next=Další (Automatic Translation)
 no-current-metrics=Žádná aktuální metriky (Automatic Translation)
+no-current-slas=Žádná aktuální SLA (Automatic Translation)
 no-results-were-found=Nebyly nalezeny žádné výsledky. (Automatic Translation)
 on-time=Včas (Automatic Translation)
 once-there-are-active-processes-metrics-will-appear-here=Jakmile jsou aktivní procesy, metriky se objeví zde. (Automatic Translation)
 open-processes-summary=Přehled otevřených procesů (Automatic Translation)
 overdue=Zpožděné (Automatic Translation)
+please-enter-at-least-one-of-the-fields=Prosím, zadejte alespoň jedno z polí. (Automatic Translation)
+please-fill-in-the-required-fields=Vyplňte prosím požadovaná pole. (Automatic Translation)
+please-try-another-name=Zadejte jiný název. (Automatic Translation)
 previous=Předchozí (Automatic Translation)
 process-name=Název procesu (Automatic Translation)
+reports=Zprávy (Automatic Translation)
+save=Uložit (Automatic Translation)
 search-for=Hledat... (Automatic Translation)
+set-up-slas=Nastavení rozsahu (Automatic Translation)
 showing=Zobrazeno (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+sla-definition=Definice SLA (Automatic Translation)
+sla-name=Název smlouvy SLA (Automatic Translation)
+sla-was-deleted=SLA byla odstraněna. (Automatic Translation)
+slas=SLA (Automatic Translation)
 the-job-interval-must-be-greater-than-0=Pracovní interval musí být větší než 0. (Automatic Translation)
 total-open=Celkový počet otevřených (Automatic Translation)
+total-pending=Celkem čekající (Automatic Translation)
+updating=Aktualizace: (Automatic Translation)
+value-must-be-an-integer-above-x=Value must be an integer above {0}. (Automatic Copy)
 workflow-metrics-configuration-name=Metrik pracovních postupů (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
