--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_el.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_el.properties
@@ -1,25 +1,60 @@
 a-duration-time-is-required=Απαιτείται μια χρονική διάρκεια. (Automatic Translation)
 a-name-is-required=Απαιτείται ένα όνομα. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=Μια SLA με το ίδιο όνομα υπάρχει ήδη. (Automatic Translation)
+cancel=Άκυρο (Automatic Translation)
 check-sla-job-interval=Ελέγξτε SLA δουλειά διάστημα (Automatic Translation)
 check-sla-job-interval-description=Για να ορίσετε το διάστημα δουλειά μέσα σε λίγα λεπτά. (Automatic Translation)
+days=Ημέρες (Automatic Translation)
+days-abbreviation=δ (Automatic Translation)
+define-a-duration-time-to-be-met=Για να ορίσετε μια χρονική διάρκεια που πρέπει να πληρούνται. (Automatic Translation)
+delete=Διαγραφή του (Automatic Translation)
+deleting-slas-will-reflect-on-report-data=Διαγραφή SLA θα προβληματιστούν σχετικά δεδομένα έκθεσης. Αυτή η ενέργεια δεν μπορεί να αναιρεθεί. Είστε βέβαιοι ότι θέλετε να διαγράψετε οριστικά; (Automatic Translation)
+description=Περιγραφή (Automatic Translation)
+duration=Διάρκεια (Automatic Translation)
+duration-time=Διάρκεια χρόνου (Automatic Translation)
+edit=Επεξεργασία (Automatic Translation)
+enter-a-whole-number=Εισαγάγετε έναν ακέραιο αριθμό. (Automatic Translation)
+enter-at-least-one-of-the-following-fields=Εισάγετε τουλάχιστον ένα από τα παρακάτω πεδία. (Automatic Translation)
 entries=Καταχωρήσεις (Automatic Translation)
+error=Σφάλμα: (Automatic Translation)
+hours=Ώρες (Automatic Translation)
+hours-abbreviation=h (Automatic Translation)
+hours-must-be-between=Ώρες πρέπει να είναι μεταξύ 00:00 και 24:00. (Automatic Translation)
+instances-in-this-process-are-being-updated-according-to-sla-changes=Παρουσίες σε αυτή τη διαδικασία ενημερώνονται ανάλογα με τις αλλαγές της SLA. (Automatic Translation)
 items=Στοιχεία (Automatic Translation)
 metrics=Μετρήσεις (Automatic Translation)
+minutes=Λεπτά (Automatic Translation)
+minutes-abbreviation=min (Automatic Translation)
+name=Όνομα (Automatic Translation)
+new-sla=Νέα SLA (Automatic Translation)
 next=Επόμενη (Automatic Translation)
 no-current-metrics=Δεν υπάρχει τρέχουσα μετρήσεις (Automatic Translation)
+no-current-slas=Δεν υπάρχει τρέχουσα SLA (Automatic Translation)
 no-results-were-found=Δεν βρέθηκαν αποτελέσματα. (Automatic Translation)
 on-time=Στην ώρα μου (Automatic Translation)
 once-there-are-active-processes-metrics-will-appear-here=Αφού υπάρχουν ενεργές διαδικασίες, μετρήσεις θα εμφανίζονται εδώ. (Automatic Translation)
 open-processes-summary=Περίληψη των ανοικτών διαδικασιών (Automatic Translation)
 overdue=Εκπρόθεσμες (Automatic Translation)
+please-enter-at-least-one-of-the-fields=Παρακαλούμε εισάγετε τουλάχιστον ένα από τα πεδία. (Automatic Translation)
+please-fill-in-the-required-fields=Παρακαλούμε συμπληρώστε τα απαιτούμενα πεδία. (Automatic Translation)
+please-try-another-name=Δοκιμάστε ένα άλλο όνομα. (Automatic Translation)
 previous=Προηγούμενη (Automatic Translation)
 process-name=Όνομα διεργασίας (Automatic Translation)
+reports=Εκθέσεις (Automatic Translation)
+save=Αποθήκευση (Automatic Translation)
 search-for=Αναζήτηση για... (Automatic Translation)
+set-up-slas=Δημιουργία SLA (Automatic Translation)
 showing=Προβολή (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+sla-definition=Ορισμός SLA (Automatic Translation)
+sla-name=Όνομα SLA (Automatic Translation)
+sla-was-deleted=Διαγράφηκε SLA. (Automatic Translation)
+slas=SLA (Automatic Translation)
 the-job-interval-must-be-greater-than-0=Το χρονικό διάστημα της εργασίας πρέπει να είναι μεγαλύτερη από 0. (Automatic Translation)
 total-open=Συνολικό άνοιγμα (Automatic Translation)
+total-pending=Σύνολο εκκρεμών (Automatic Translation)
+updating=Ενημέρωση: (Automatic Translation)
+value-must-be-an-integer-above-x=Value must be an integer above {0}. (Automatic Copy)
 workflow-metrics-configuration-name=Μετρήσεις ροής εργασίας (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
