--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_en.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_en.properties
@@ -1,25 +1,60 @@
 a-duration-time-is-required=A duration time is required.
 a-name-is-required=A name is required.
 an-sla-with-the-same-name-already-exists=An SLA with the same name already exists.
+cancel=Cancel
 check-sla-job-interval=Check SLA Job Interval
 check-sla-job-interval-description=Set the job interval in minutes.
+days=Days
+days-abbreviation=d
+define-a-duration-time-to-be-met=Define a duration time to be met.
+delete=Delete
+deleting-slas-will-reflect-on-report-data=Deleting SLAs will reflect on report data. This action cannot be undone. Are you sure you want to permanently delete it?
+description=Description
+duration=Duration
+duration-time=Duration Time
+edit=Edit
+enter-a-whole-number=Enter a whole number.
+enter-at-least-one-of-the-following-fields=Enter at least one of the following fields.
 entries=Entries
+error=Error:
+hours=Hours
+hours-abbreviation=h
+hours-must-be-between=Hours must be between 00:00 and 24:00.
+instances-in-this-process-are-being-updated-according-to-sla-changes=Instances in this process are being updated according to SLA changes.
 items=Items
 metrics=Metrics
+minutes=Minutes
+minutes-abbreviation=min
+name=Name
+new-sla=New SLA
 next=Next
 no-current-metrics=No Current Metrics
+no-current-slas=No Current SLAs
 no-results-were-found=No results were found.
 on-time=On Time
 once-there-are-active-processes-metrics-will-appear-here=Once there are active processes, metrics will appear here.
 open-processes-summary=Open Processes Summary
 overdue=Overdue
+please-enter-at-least-one-of-the-fields=Please enter at least one of the fields.
+please-fill-in-the-required-fields=Please fill in the required fields.
+please-try-another-name=Please try another name.
 previous=Previous
 process-name=Process Name
+reports=Reports
+save=Save
 search-for=Search for...
+set-up-slas=Set Up SLAs
 showing=Showing
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries.
+sla-definition=SLA Definition
+sla-name=SLA Name
+sla-was-deleted=SLA was deleted.
+slas=SLAs
 the-job-interval-must-be-greater-than-0=The job interval must be greater than 0.
 total-open=Total Open
+total-pending=Total Pending
+updating=Updating:
+value-must-be-an-integer-above-x=Value must be an integer above {0}.
 workflow-metrics-configuration-name=Workflow Metrics
 x-item={0} Item
 x-items={0} Items
