--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_es.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_es.properties
@@ -1,25 +1,60 @@
 a-duration-time-is-required=Es necesario especificar una duración.
 a-name-is-required=Es necesario especificar un nombre.
 an-sla-with-the-same-name-already-exists=Ya existe un SLA con el mismo nombre.
+cancel=Cancelar (Automatic Translation)
 check-sla-job-interval=Compruebe el intervalo de trabajo de SLA (Automatic Translation)
 check-sla-job-interval-description=Establecer el intervalo de trabajo en minutos. (Automatic Translation)
+days=Días (Automatic Translation)
+days-abbreviation=d (Automatic Translation)
+define-a-duration-time-to-be-met=Definir un tiempo de duración a cumplirse. (Automatic Translation)
+delete=Eliminar (Automatic Translation)
+deleting-slas-will-reflect-on-report-data=Eliminar los SLAs reflexionará sobre datos del informe. Esta acción no se puede deshacer. ¿Está seguro de que desea eliminarlo permanentemente? (Automatic Translation)
+description=Descripción (Automatic Translation)
+duration=Duración (Automatic Translation)
+duration-time=Tiempo de duración (Automatic Translation)
+edit=Editar (Automatic Translation)
+enter-a-whole-number=Introduzca un número entero. (Automatic Translation)
+enter-at-least-one-of-the-following-fields=Introduzca al menos uno de los siguientes campos. (Automatic Translation)
 entries=Entradas
+error=Error: (Automatic Translation)
+hours=Horas (Automatic Translation)
+hours-abbreviation=h (Automatic Translation)
+hours-must-be-between=Horas deben ser de 00:00 a 24:00. (Automatic Translation)
+instances-in-this-process-are-being-updated-according-to-sla-changes=Instancias en este proceso se actualizan según cambios de SLA. (Automatic Translation)
 items=Elementos
 metrics=Métricas
+minutes=Minutos (Automatic Translation)
+minutes-abbreviation=min (Automatic Translation)
+name=Nombre (Automatic Translation)
+new-sla=SLA nueva (Automatic Translation)
 next=Siguiente
 no-current-metrics=Sin métricas actuales
+no-current-slas=No SLA actuales (Automatic Translation)
 no-results-were-found=No se encontraron resultados.
 on-time=A tiempo
 once-there-are-active-processes-metrics-will-appear-here=Cuando haya procesos activos, las métricas se mostrarán aquí.
 open-processes-summary=Resumen de procesos abiertos
 overdue=Vencido
+please-enter-at-least-one-of-the-fields=Por favor introduzca al menos uno de los campos. (Automatic Translation)
+please-fill-in-the-required-fields=Por favor llene los campos requeridos. (Automatic Translation)
+please-try-another-name=Por favor probar con otro nombre. (Automatic Translation)
 previous=Anterior
 process-name=Nombre del proceso
+reports=Informes (Automatic Translation)
+save=Guardar (Automatic Translation)
 search-for=Buscar…
+set-up-slas=Establecer SLAs (Automatic Translation)
 showing=Mostrando
 showing-x-to-x-of-x-entries=Mostrando {0} a {1} de {2} entradas.
+sla-definition=Definición de SLA (Automatic Translation)
+sla-name=Nombre de SLA (Automatic Translation)
+sla-was-deleted=Se suprimió el SLA. (Automatic Translation)
+slas=SLAs (Automatic Translation)
 the-job-interval-must-be-greater-than-0=El intervalo de trabajo debe ser mayor que 0. (Automatic Translation)
 total-open=Total abiertos
+total-pending=Total pendiente (Automatic Translation)
+updating=Actualización: (Automatic Translation)
+value-must-be-an-integer-above-x=Value must be an integer above {0}. (Automatic Copy)
 workflow-metrics-configuration-name=Mediciones de flujo de trabajo (Automatic Translation)
 x-item={0} Elemento
 x-items={0} Elementos
