--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_et.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_et.properties
@@ -1,25 +1,60 @@
 a-duration-time-is-required=Kestus aega kulub. (Automatic Translation)
 a-name-is-required=Nimi on nõutav. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=SLA sama nimega on juba olemas. (Automatic Translation)
+cancel=Loobu (Automatic Translation)
 check-sla-job-interval=Kontrollige SLA printeritööde intervalli (Automatic Translation)
 check-sla-job-interval-description=Määrata töö intervalli minutites. (Automatic Translation)
+days=Päeva (Automatic Translation)
+days-abbreviation=d (Automatic Translation)
+define-a-duration-time-to-be-met=Määratleda kestus aeg täita. (Automatic Translation)
+delete=Kustuta (Automatic Translation)
+deleting-slas-will-reflect-on-report-data=Kustutamine SLAs kajastab andmed. Seda toimingut ei saa tagasi võtta. Kas soovite kindlasti jäädavalt kustutada? (Automatic Translation)
+description=Kirjeldus (Automatic Translation)
+duration=Kestus (Automatic Translation)
+duration-time=Kestus aeg (Automatic Translation)
+edit=Redigeeri (Automatic Translation)
+enter-a-whole-number=Sisestage täisarv. (Automatic Translation)
+enter-at-least-one-of-the-following-fields=Sisestage üks järgmistest väljadest. (Automatic Translation)
 entries=Kanded (Automatic Translation)
+error=Viga: (Automatic Translation)
+hours=Tundi (Automatic Translation)
+hours-abbreviation=h (Automatic Translation)
+hours-must-be-between=Tundi tuleb 00:00-24:00. (Automatic Translation)
+instances-in-this-process-are-being-updated-according-to-sla-changes=Selle protsessi aknad värskendatud SLA muudatuste järgi. (Automatic Translation)
 items=Üksused (Automatic Translation)
 metrics=Mõõdikud (Automatic Translation)
+minutes=Minutit (Automatic Translation)
+minutes-abbreviation=min (Automatic Translation)
+name=Nimi (Automatic Translation)
+new-sla=Uue SLA (Automatic Translation)
 next=Järgmise (Automatic Translation)
 no-current-metrics=Ei ole praeguse mõõdikud (Automatic Translation)
+no-current-slas=Ei ole praeguse SLAd (Automatic Translation)
 no-results-were-found=Tulemusi ei leitud. (Automatic Translation)
 on-time=Õigeaegselt (Automatic Translation)
 once-there-are-active-processes-metrics-will-appear-here=Kui on aktiivsed protsessid, kuvatakse siin mõõdikud. (Automatic Translation)
 open-processes-summary=Avatud menetluste kokkuvõte (Automatic Translation)
 overdue=Tähtaja ületanud (Automatic Translation)
+please-enter-at-least-one-of-the-fields=Palun sisestage vähemalt ühe välja. (Automatic Translation)
+please-fill-in-the-required-fields=Palun täitke kohustuslikud väljad. (Automatic Translation)
+please-try-another-name=Palun proovige mõnda muud nime. (Automatic Translation)
 previous=Eelmise (Automatic Translation)
 process-name=Protsessi nimi (Automatic Translation)
+reports=Aruanded (Automatic Translation)
+save=Salvesta (Automatic Translation)
 search-for=Otsi... (Automatic Translation)
+set-up-slas=Saate seadistada SLAd (Automatic Translation)
 showing=Nähtaval (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+sla-definition=SLA määratlus (Automatic Translation)
+sla-name=SLA nimi (Automatic Translation)
+sla-was-deleted=SLA kustutati. (Automatic Translation)
+slas=SLAd (Automatic Translation)
 the-job-interval-must-be-greater-than-0=Töö intervall peab olema suurem kui 0. (Automatic Translation)
 total-open=Kokku avatud (Automatic Translation)
+total-pending=Kokku ootel (Automatic Translation)
+updating=Värskendamine: (Automatic Translation)
+value-must-be-an-integer-above-x=Value must be an integer above {0}. (Automatic Copy)
 workflow-metrics-configuration-name=Töövoo mõõdikud (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
