--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_fa.properties
@@ -1,25 +1,60 @@
 a-duration-time-is-required=مدت زمان مورد نیاز است. (Automatic Translation)
 a-name-is-required=نام مورد نیاز است. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=انجمن گفتگوی با همین نام از قبل وجود دارد. (Automatic Translation)
+cancel=لغو (Automatic Translation)
 check-sla-job-interval=بررسی فاصله کار انجمن گفتگوی (Automatic Translation)
 check-sla-job-interval-description=تنظیم فاصله کار در عرض چند دقیقه. (Automatic Translation)
+days=روز (Automatic Translation)
+days-abbreviation=د (Automatic Translation)
+define-a-duration-time-to-be-met=تعریف یک مدت به ملاقات کرد. (Automatic Translation)
+delete=حذف (Automatic Translation)
+deleting-slas-will-reflect-on-report-data=حذف SLAs بر داده های گزارش منعکس خواهد کرد. این دستور قابل بازگشت نیست. شما می خواهید برای همیشه حذف شود؟ (Automatic Translation)
+description=شرح (Automatic Translation)
+duration=مدت زمان (Automatic Translation)
+duration-time=مدت زمان (Automatic Translation)
+edit=ویرایش (Automatic Translation)
+enter-a-whole-number=تعداد کل را وارد کنید. (Automatic Translation)
+enter-at-least-one-of-the-following-fields=حداقل یکی از قسمت های زیر را وارد کنید. (Automatic Translation)
 entries=نوشته های (Automatic Translation)
+error=خطا: (Automatic Translation)
+hours=ساعت (Automatic Translation)
+hours-abbreviation=h (Automatic Translation)
+hours-must-be-between=ساعت 00:00 لغايت 24:00 باید. (Automatic Translation)
+instances-in-this-process-are-being-updated-according-to-sla-changes=نمونه ها در این فرایند است که با توجه به تغییرات SLA به روز شده. (Automatic Translation)
 items=موارد (Automatic Translation)
 metrics=متریک (Automatic Translation)
+minutes=دقیقه (Automatic Translation)
+minutes-abbreviation=دقیقه (Automatic Translation)
+name=نام (Automatic Translation)
+new-sla=انجمن گفتگوی جدید (Automatic Translation)
 next=بعدی (Automatic Translation)
 no-current-metrics=معیارهای فعلی هیچ (Automatic Translation)
+no-current-slas=هیچ SLAs فعلی (Automatic Translation)
 no-results-were-found=نتیجه ای یافت نشد. (Automatic Translation)
 on-time=در زمان (Automatic Translation)
 once-there-are-active-processes-metrics-will-appear-here=از هنگامی که فرآیندهای فعال معیارهای اینجا ظاهر می شود. (Automatic Translation)
 open-processes-summary=خلاصه پروسه باز (Automatic Translation)
 overdue=سر رسیده (Automatic Translation)
+please-enter-at-least-one-of-the-fields=لطفا حداقل یک زمینه را وارد کنید. (Automatic Translation)
+please-fill-in-the-required-fields=لطفا رشته های مورد نیاز را پر کنید. (Automatic Translation)
+please-try-another-name=لطفاً نام دیگری را امتحان کنید. (Automatic Translation)
 previous=قبلی (Automatic Translation)
 process-name=نمايش (Automatic Translation)
+reports=گزارش (Automatic Translation)
+save=ذخیره (Automatic Translation)
 search-for=جستجو برای... (Automatic Translation)
+set-up-slas=راه اندازی SLAs (Automatic Translation)
 showing=نمایش (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+sla-definition=تعریف انجمن گفتگوی (Automatic Translation)
+sla-name=نام انجمن گفتگوی (Automatic Translation)
+sla-was-deleted=انجمن گفتگوی حذف شد. (Automatic Translation)
+slas=SLAs (Automatic Translation)
 the-job-interval-must-be-greater-than-0=فاصله کار باید بزرگتر از 0 باشد. (Automatic Translation)
 total-open=کل باز (Automatic Translation)
+total-pending=کل انتظار (Automatic Translation)
+updating=به روز رسانی: (Automatic Translation)
+value-must-be-an-integer-above-x=Value must be an integer above {0}. (Automatic Copy)
 workflow-metrics-configuration-name=معیارهای گردش کار (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
