--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_hi_IN.properties
@@ -1,25 +1,60 @@
 a-duration-time-is-required=एक अवधि समय की आवश्यकता है । (Automatic Translation)
 a-name-is-required=एक नाम की आवश्यकता है । (Automatic Translation)
 an-sla-with-the-same-name-already-exists=समान नाम वाला SLA पहले से मौजूद है. (Automatic Translation)
+cancel=रद्द करना (Automatic Translation)
 check-sla-job-interval=SLA कार्य अंतराल जांचें (Automatic Translation)
 check-sla-job-interval-description=कार्य अंतराल को मिनटों में सेट करें । (Automatic Translation)
+days=दिनों (Automatic Translation)
+days-abbreviation=डी (Automatic Translation)
+define-a-duration-time-to-be-met=अवधि समय को पूरा करने के लिए परिभाषित करें । (Automatic Translation)
+delete=हटाएँ (Automatic Translation)
+deleting-slas-will-reflect-on-report-data=SLAs को हटाना रिपोर्ट डेटा पर प्रतिबिंबित होगा । यह क्रिया पूर्ववत् नहीं की जा सकती । क्या आप निश्चयपूर्वक इसे स्थाई रूप से हटाना चाहते हैं? (Automatic Translation)
+description=विवरण (Automatic Translation)
+duration=अवधि (Automatic Translation)
+duration-time=अवधि समय (Automatic Translation)
+edit=संपादित (Automatic Translation)
+enter-a-whole-number=कोई पूर्णांक दर्ज करें । (Automatic Translation)
+enter-at-least-one-of-the-following-fields=निंन में से एक फ़ील्ड दर्ज करें । (Automatic Translation)
 entries=प्रविष्टियों (Automatic Translation)
+error=त्रुटि: (Automatic Translation)
+hours=घंटे (Automatic Translation)
+hours-abbreviation=एच (Automatic Translation)
+hours-must-be-between=घंटे 00:00 और 24:00 के बीच होना चाहिए । (Automatic Translation)
+instances-in-this-process-are-being-updated-according-to-sla-changes=इस प्रक्रिया में इंस्टेंसेस SLA परिवर्तन के अनुसार अद्यतन किया जा रहा है । (Automatic Translation)
 items=आइटम (Automatic Translation)
 metrics=मैट्रिक्स (Automatic Translation)
+minutes=मिनट (Automatic Translation)
+minutes-abbreviation=न्यूनतम (Automatic Translation)
+name=नाम (Automatic Translation)
+new-sla=नया SLA (Automatic Translation)
 next=अगले (Automatic Translation)
 no-current-metrics=कोई वर्तमान मीट्रिक (Automatic Translation)
+no-current-slas=कोई मौजूदा SLAs (Automatic Translation)
 no-results-were-found=कोई परिणाम नहीं मिले । (Automatic Translation)
 on-time=समय पर (Automatic Translation)
 once-there-are-active-processes-metrics-will-appear-here=एक बार वहां सक्रिय प्रक्रियाओं रहे हैं, मैट्रिक्स यहां दिखाई देगा । (Automatic Translation)
 open-processes-summary=प्रक्रिया सारांश खोलें (Automatic Translation)
 overdue=अतिदेय (Automatic Translation)
+please-enter-at-least-one-of-the-fields=कृपया फ़ील्ड में से एक को दर्ज करें । (Automatic Translation)
+please-fill-in-the-required-fields=कृपया आवश्यक फ़ील्ड्स भरें । (Automatic Translation)
+please-try-another-name=कृपया किसी अंय नाम का प्रयास करें । (Automatic Translation)
 previous=पिछले (Automatic Translation)
 process-name=प्रक्रिया का नाम (Automatic Translation)
+reports=रिपोर्ट (Automatic Translation)
+save=सहेजें (Automatic Translation)
 search-for=खोज के लिए.. । (Automatic Translation)
+set-up-slas=SLAs सेट अप (Automatic Translation)
 showing=इस (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+sla-definition=SLA परिभाषा (Automatic Translation)
+sla-name=SLA नाम (Automatic Translation)
+sla-was-deleted=SLA हटा दिया गया था । (Automatic Translation)
+slas=SLAs (Automatic Translation)
 the-job-interval-must-be-greater-than-0=कार्य अंतराल 0 से अधिक होना आवश्यक है । (Automatic Translation)
 total-open=कुल खुला (Automatic Translation)
+total-pending=कुल लंबित (Automatic Translation)
+updating=अद्यतन: (Automatic Translation)
+value-must-be-an-integer-above-x=Value must be an integer above {0}. (Automatic Copy)
 workflow-metrics-configuration-name=कार्यप्रवाह मीट्रिक (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
