--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_hu.properties
@@ -1,25 +1,60 @@
 a-duration-time-is-required=Az időtartam ideje kötelező.
 a-name-is-required=A név kötelező.
 an-sla-with-the-same-name-already-exists=Egy ilyen nevű SLA már létezik.
+cancel=Mégse (Automatic Translation)
 check-sla-job-interval=Ellenőrizze a SLA munkát intervallum (Automatic Translation)
 check-sla-job-interval-description=A munka intervallum beállítása percek alatt. (Automatic Translation)
+days=Nap (Automatic Translation)
+days-abbreviation=d (Automatic Translation)
+define-a-duration-time-to-be-met=A teljesítendő időtartamát határozza meg. (Automatic Translation)
+delete=Törlése (Automatic Translation)
+deleting-slas-will-reflect-on-report-data=A jelentés adatai tükrözni fogja a SLA-k törlése. Ez a művelet nem vonható vissza. Biztosan véglegesen törli? (Automatic Translation)
+description=Leírás (Automatic Translation)
+duration=Időtartama (Automatic Translation)
+duration-time=Időtartama (Automatic Translation)
+edit=Szerkesztése (Automatic Translation)
+enter-a-whole-number=Írjon be egy egész számot. (Automatic Translation)
+enter-at-least-one-of-the-following-fields=Adja meg az alábbi mezők közül legalább egyet. (Automatic Translation)
 entries=Bejegyzések
+error=Hiba: (Automatic Translation)
+hours=Óra (Automatic Translation)
+hours-abbreviation=h (Automatic Translation)
+hours-must-be-between=Óra 00:00-24:00 között kell lennie. (Automatic Translation)
+instances-in-this-process-are-being-updated-according-to-sla-changes=Ez a folyamat példányának SLA módosítások alapján naprakésszé tételéről. (Automatic Translation)
 items=Elemek
 metrics=Mérési adatok
+minutes=Perc (Automatic Translation)
+minutes-abbreviation=min (Automatic Translation)
+name=név (Automatic Translation)
+new-sla=Új SLA (Automatic Translation)
 next=Következő
 no-current-metrics=Nincsenek aktuális mérési adatok
+no-current-slas=Nincs aktuális SLA-k (Automatic Translation)
 no-results-were-found=Nem találhatók eredmények.
 on-time=Időben
 once-there-are-active-processes-metrics-will-appear-here=Amikor aktív eljárások vannak folyamatban, itt jelennek meg a mérési adatok.
 open-processes-summary=Nyitott eljárások összesítése
 overdue=Megkésett
+please-enter-at-least-one-of-the-fields=Kérjük, adja meg legalább az egyik mező. (Automatic Translation)
+please-fill-in-the-required-fields=Kérjük, töltse ki a szükséges mezőket. (Automatic Translation)
+please-try-another-name=Kérjük, próbálja meg egy másik nevet. (Automatic Translation)
 previous=Előző
 process-name=Eljárás neve
+reports=Jelentések (Automatic Translation)
+save=Mentés (Automatic Translation)
 search-for=Keresés...
+set-up-slas=SLA-k beállítása (Automatic Translation)
 showing=Megjelenítve
 showing-x-to-x-of-x-entries=Megjelenítve {0} - {1} / {2} bejegyzésből.
+sla-definition=SLA kialakítás támogatása (Automatic Translation)
+sla-name=SLA neve (Automatic Translation)
+sla-was-deleted=SLA törölve lett. (Automatic Translation)
+slas=SLA-k (Automatic Translation)
 the-job-interval-must-be-greater-than-0=A munka időközének 0-nál nagyobbnak kell lennie. (Automatic Translation)
 total-open=Nyitottak összesen
+total-pending=Teljes folyamatban (Automatic Translation)
+updating=Frissítés: (Automatic Translation)
+value-must-be-an-integer-above-x=Value must be an integer above {0}. (Automatic Copy)
 workflow-metrics-configuration-name=Munkafolyamat-mutatók (Automatic Translation)
 x-item={0} Elem
 x-items={0} Elem
