--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_in.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_in.properties
@@ -1,25 +1,60 @@
 a-duration-time-is-required=Durasi waktu diperlukan. (Automatic Translation)
 a-name-is-required=Nama diperlukan. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=SLA dengan nama yang sama sudah ada. (Automatic Translation)
+cancel=Batal (Automatic Translation)
 check-sla-job-interval=Periksa SLA pekerjaan Interval (Automatic Translation)
 check-sla-job-interval-description=Mengatur interval pekerjaan dalam menit. (Automatic Translation)
+days=Hari (Automatic Translation)
+days-abbreviation=d (Automatic Translation)
+define-a-duration-time-to-be-met=Menentukan durasi waktu harus dipenuhi. (Automatic Translation)
+delete=Hapus (Automatic Translation)
+deleting-slas-will-reflect-on-report-data=Menghapus SLA akan mencerminkan pada data laporan. Tindakan ini tidak dapat dikembalikan. Apakah Anda yakin ingin menghapus secara permanen? (Automatic Translation)
+description=Deskripsi (Automatic Translation)
+duration=Durasi (Automatic Translation)
+duration-time=Durasi waktu (Automatic Translation)
+edit=Mengedit (Automatic Translation)
+enter-a-whole-number=Masukkan seluruh nomor. (Automatic Translation)
+enter-at-least-one-of-the-following-fields=Masukkan setidaknya salah satu kolom berikut. (Automatic Translation)
 entries=Entri (Automatic Translation)
+error=Kesalahan: (Automatic Translation)
+hours=Jam (Automatic Translation)
+hours-abbreviation=h (Automatic Translation)
+hours-must-be-between=Jam harus pukul 00:00-24:00. (Automatic Translation)
+instances-in-this-process-are-being-updated-according-to-sla-changes=Contoh dalam proses ini sedang diperbarui sesuai dengan perubahan SLA. (Automatic Translation)
 items=Item (Automatic Translation)
 metrics=Metrik (Automatic Translation)
+minutes=Menit (Automatic Translation)
+minutes-abbreviation=min (Automatic Translation)
+name=Nama (Automatic Translation)
+new-sla=Baru SLA (Automatic Translation)
 next=Berikutnya (Automatic Translation)
 no-current-metrics=Metrik yang saat ini tidak ada (Automatic Translation)
+no-current-slas=SLA saat ini tidak ada (Automatic Translation)
 no-results-were-found=Tidak ada hasil ditemukan. (Automatic Translation)
 on-time=Tepat waktu (Automatic Translation)
 once-there-are-active-processes-metrics-will-appear-here=Setelah ada proses aktif, metrik akan muncul di sini. (Automatic Translation)
 open-processes-summary=Proses terbuka ringkasan (Automatic Translation)
 overdue=Jatuh tempo (Automatic Translation)
+please-enter-at-least-one-of-the-fields=Masukkan setidaknya salah satu bidang. (Automatic Translation)
+please-fill-in-the-required-fields=Silakan isi bidang yang wajib diisi. (Automatic Translation)
+please-try-another-name=Coba nama lain. (Automatic Translation)
 previous=Sebelumnya (Automatic Translation)
 process-name=Nama proses (Automatic Translation)
+reports=Laporan (Automatic Translation)
+save=Simpan (Automatic Translation)
 search-for=Pencarian untuk... (Automatic Translation)
+set-up-slas=Mengatur SLA (Automatic Translation)
 showing=Menampilkan (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+sla-definition=Definisi SLA (Automatic Translation)
+sla-name=Nama SLA (Automatic Translation)
+sla-was-deleted=SLA dihapus. (Automatic Translation)
+slas=SLA (Automatic Translation)
 the-job-interval-must-be-greater-than-0=Interval pekerjaan harus lebih besar dari 0. (Automatic Translation)
 total-open=Total terbuka (Automatic Translation)
+total-pending=Total tertunda (Automatic Translation)
+updating=Memperbarui: (Automatic Translation)
+value-must-be-an-integer-above-x=Value must be an integer above {0}. (Automatic Copy)
 workflow-metrics-configuration-name=Alur kerja metrik (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
