--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_it.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_it.properties
@@ -1,25 +1,60 @@
 a-duration-time-is-required=È necessario un tempo di durata. (Automatic Translation)
 a-name-is-required=È richiesto un nome. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=Un contratto di servizio con lo stesso nome esiste già. (Automatic Translation)
+cancel=Annulla (Automatic Translation)
 check-sla-job-interval=Controllare l'intervallo di lavoro SLA (Automatic Translation)
 check-sla-job-interval-description=Impostare l'intervallo di lavoro in minuti. (Automatic Translation)
+days=Giorni (Automatic Translation)
+days-abbreviation=d (Automatic Translation)
+define-a-duration-time-to-be-met=Definire un tempo di durata devono essere soddisfatte. (Automatic Translation)
+delete=Elimina (Automatic Translation)
+deleting-slas-will-reflect-on-report-data=L'eliminazione di SLA rifletterà su dati report. Questa azione non può essere annullata. Sei sicuro di che voler eliminare in modo permanente? (Automatic Translation)
+description=Descrizione (Automatic Translation)
+duration=Durata (Automatic Translation)
+duration-time=Tempo di durata (Automatic Translation)
+edit=Modifica (Automatic Translation)
+enter-a-whole-number=Immettere un numero intero. (Automatic Translation)
+enter-at-least-one-of-the-following-fields=Inserire almeno uno dei seguenti campi. (Automatic Translation)
 entries=Voci (Automatic Translation)
+error=Errore: (Automatic Translation)
+hours=Ore (Automatic Translation)
+hours-abbreviation=h (Automatic Translation)
+hours-must-be-between=Ore devono essere compreso tra 00:00 e 24:00. (Automatic Translation)
+instances-in-this-process-are-being-updated-according-to-sla-changes=Istanze in questo processo vengono aggiornate in base alle modifiche di SLA. (Automatic Translation)
 items=Elementi (Automatic Translation)
 metrics=Metriche (Automatic Translation)
+minutes=Minuti (Automatic Translation)
+minutes-abbreviation=min (Automatic Translation)
+name=Nome (Automatic Translation)
+new-sla=Nuovo SLA (Automatic Translation)
 next=Successivo (Automatic Translation)
 no-current-metrics=Nessuna metrica corrente (Automatic Translation)
+no-current-slas=Nessuna correnti SLA (Automatic Translation)
 no-results-were-found=Nessun risultato trovato. (Automatic Translation)
 on-time=Il tempo (Automatic Translation)
 once-there-are-active-processes-metrics-will-appear-here=Una volta che ci sono processi attivi, metriche apparirà qui. (Automatic Translation)
 open-processes-summary=Riepilogo di processi aperti (Automatic Translation)
 overdue=In ritardo (Automatic Translation)
+please-enter-at-least-one-of-the-fields=Si prega di inserire almeno uno dei campi. (Automatic Translation)
+please-fill-in-the-required-fields=Si prega di compilare i campi obbligatori. (Automatic Translation)
+please-try-another-name=Si prega di provare un altro nome. (Automatic Translation)
 previous=Precedente (Automatic Translation)
 process-name=Nome del processo (Automatic Translation)
+reports=Rapporti (Automatic Translation)
+save=Salva (Automatic Translation)
 search-for=Ricerca per... (Automatic Translation)
+set-up-slas=Impostare la pagina di SLA (Automatic Translation)
 showing=Risultati (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+sla-definition=Definizione di SLA (Automatic Translation)
+sla-name=Nome di SLA (Automatic Translation)
+sla-was-deleted=SLA è stato eliminato. (Automatic Translation)
+slas=Contratti di servizio (Automatic Translation)
 the-job-interval-must-be-greater-than-0=L'intervallo di lavoro deve essere maggiore di 0. (Automatic Translation)
 total-open=Totale Open (Automatic Translation)
+total-pending=Totale in sospeso (Automatic Translation)
+updating=Aggiornamento: (Automatic Translation)
+value-must-be-an-integer-above-x=Value must be an integer above {0}. (Automatic Copy)
 workflow-metrics-configuration-name=Metriche del flusso di lavoro (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
