--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_iw.properties
@@ -1,25 +1,60 @@
 a-duration-time-is-required=משך זמן נדרש. (Automatic Translation)
 a-name-is-required=שם נדרש. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=SLA בעלי שם זהה כבר קיים. (Automatic Translation)
+cancel=ביטול (Automatic Translation)
 check-sla-job-interval=בדוק מרווח עבודה SLA (Automatic Translation)
 check-sla-job-interval-description=להגדיר את מרווח הזמן של עבודה תוך דקות. (Automatic Translation)
+days=ימים (Automatic Translation)
+days-abbreviation=d (Automatic Translation)
+define-a-duration-time-to-be-met=הגדרת משך זמן כדי להתקיים. (Automatic Translation)
+delete=מחק (Automatic Translation)
+deleting-slas-will-reflect-on-report-data=מחיקת Sla תשקף על נתוני דוח. פעולה זו לא ניתן לבטל. האם אתה בטוח שברצונך למחוק אותו לצמיתות? (Automatic Translation)
+description=תיאור (Automatic Translation)
+duration=משך (Automatic Translation)
+duration-time=משך הזמן (Automatic Translation)
+edit=עריכה (Automatic Translation)
+enter-a-whole-number=הזן מספר שלם. (Automatic Translation)
+enter-at-least-one-of-the-following-fields=הזן לפחות אחד מהשדות הבאים. (Automatic Translation)
 entries=ערכי (Automatic Translation)
+error=שגיאה: (Automatic Translation)
+hours=שעות (Automatic Translation)
+hours-abbreviation=h (Automatic Translation)
+hours-must-be-between=שעות חייב להיות בין 00:00 ל- 24:00. (Automatic Translation)
+instances-in-this-process-are-being-updated-according-to-sla-changes=מופעים בתהליך זה מתעדכנות בהתאם לשינויים SLA. (Automatic Translation)
 items=פריטים (Automatic Translation)
 metrics=מדדים (Automatic Translation)
+minutes=דקות (Automatic Translation)
+minutes-abbreviation=min (Automatic Translation)
+name=שם (Automatic Translation)
+new-sla=SLA חדש (Automatic Translation)
 next=הבא (Automatic Translation)
 no-current-metrics=אין מדדים הנוכחי (Automatic Translation)
+no-current-slas=Sla הנוכחי אין (Automatic Translation)
 no-results-were-found=לא נמצאו תוצאות. (Automatic Translation)
 on-time=בזמן (Automatic Translation)
 once-there-are-active-processes-metrics-will-appear-here=פעם קיימות התהליכים הפעילים, מדדים יופיע כאן. (Automatic Translation)
 open-processes-summary=תהליכים פתוחה סיכום (Automatic Translation)
 overdue=איחור (Automatic Translation)
+please-enter-at-least-one-of-the-fields=הזינו לפחות אחד מהשדות. (Automatic Translation)
+please-fill-in-the-required-fields=אנא מלאו את השדות הדרושים. (Automatic Translation)
+please-try-another-name=אנא נסה שם אחר. (Automatic Translation)
 previous=הקודם (Automatic Translation)
 process-name=שם התהליך (Automatic Translation)
+reports=דוחות (Automatic Translation)
+save=שמור (Automatic Translation)
 search-for=החיפוש אחר... (Automatic Translation)
+set-up-slas=הגדרת Sla (Automatic Translation)
 showing=מציג (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+sla-definition=הגדרת SLA (Automatic Translation)
+sla-name=SLA שם (Automatic Translation)
+sla-was-deleted=SLA נמחק. (Automatic Translation)
+slas=Sla (Automatic Translation)
 the-job-interval-must-be-greater-than-0=המשימה למרווח חייב להיות גדול מ- 0. (Automatic Translation)
 total-open=פתוח הכולל (Automatic Translation)
+total-pending=סה כ ממתינה (Automatic Translation)
+updating=מעדכן: (Automatic Translation)
+value-must-be-an-integer-above-x=Value must be an integer above {0}. (Automatic Copy)
 workflow-metrics-configuration-name=זרימת העבודה מדדים (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
