--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ja.properties
@@ -1,25 +1,60 @@
 a-duration-time-is-required=持続時間は必須です。
 a-name-is-required=名前は必須です。
 an-sla-with-the-same-name-already-exists=同じ名前のSLAがすでに存在します。
+cancel=Cancel (Automatic Copy)
 check-sla-job-interval=Check SLA Job Interval (Automatic Copy)
 check-sla-job-interval-description=Set the job interval in minutes. (Automatic Copy)
+days=Days (Automatic Copy)
+days-abbreviation=d (Automatic Copy)
+define-a-duration-time-to-be-met=Define a duration time to be met. (Automatic Copy)
+delete=Delete (Automatic Copy)
+deleting-slas-will-reflect-on-report-data=Deleting SLAs will reflect on report data. This action cannot be undone. Are you sure you want to permanently delete it? (Automatic Copy)
+description=Description (Automatic Copy)
+duration=Duration (Automatic Copy)
+duration-time=Duration Time (Automatic Copy)
+edit=Edit (Automatic Copy)
+enter-a-whole-number=Enter a whole number. (Automatic Copy)
+enter-at-least-one-of-the-following-fields=Enter at least one of the following fields. (Automatic Copy)
 entries=エントリー
+error=Error: (Automatic Copy)
+hours=Hours (Automatic Copy)
+hours-abbreviation=h (Automatic Copy)
+hours-must-be-between=Hours must be between 00:00 and 24:00. (Automatic Copy)
+instances-in-this-process-are-being-updated-according-to-sla-changes=Instances in this process are being updated according to SLA changes. (Automatic Copy)
 items=商品
 metrics=統計情報
+minutes=Minutes (Automatic Copy)
+minutes-abbreviation=min (Automatic Copy)
+name=Name (Automatic Copy)
+new-sla=New SLA (Automatic Copy)
 next=次へ
 no-current-metrics=最新統計情報はありません
+no-current-slas=No Current SLAs (Automatic Copy)
 no-results-were-found=結果が見つかりません
 on-time=予定通り
 once-there-are-active-processes-metrics-will-appear-here=有効なプロセスがある場合、統計情報がここに表示されます。
 open-processes-summary=オープン中のプロセスの概要
 overdue=期限切れ
+please-enter-at-least-one-of-the-fields=Please enter at least one of the fields. (Automatic Copy)
+please-fill-in-the-required-fields=Please fill in the required fields. (Automatic Copy)
+please-try-another-name=Please try another name. (Automatic Copy)
 previous=前へ
 process-name=プロセス名
+reports=Reports (Automatic Copy)
+save=Save (Automatic Copy)
 search-for=検索...
+set-up-slas=Set Up SLAs (Automatic Copy)
 showing=表示しています
 showing-x-to-x-of-x-entries={2} エントリーのうち {0} 件から {1} 件を表示しています。
+sla-definition=SLA Definition (Automatic Copy)
+sla-name=SLA Name (Automatic Copy)
+sla-was-deleted=SLA was deleted. (Automatic Copy)
+slas=SLAs (Automatic Copy)
 the-job-interval-must-be-greater-than-0=The job interval must be greater than 0. (Automatic Copy)
 total-open=合計オープン数
+total-pending=Total Pending (Automatic Copy)
+updating=Updating: (Automatic Copy)
+value-must-be-an-integer-above-x=Value must be an integer above {0}. (Automatic Copy)
 workflow-metrics-configuration-name=Workflow Metrics (Automatic Copy)
 x-item={0} 個の商品
 x-items={0} 個の商品
