--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ko.properties
@@ -1,25 +1,60 @@
 a-duration-time-is-required=기간 시간이 필요 합니다. (Automatic Translation)
 a-name-is-required=이름이 필요 합니다. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=이름이 같은 SLA 이미 존재합니다. (Automatic Translation)
+cancel=취소 (Automatic Translation)
 check-sla-job-interval=SLA 작업 간격을 확인 (Automatic Translation)
 check-sla-job-interval-description=분에 작업 간격을 설정 합니다. (Automatic Translation)
+days=일 (Automatic Translation)
+days-abbreviation=d (Automatic Translation)
+define-a-duration-time-to-be-met=충족 되어야 하는 기간 시간을 정의 합니다. (Automatic Translation)
+delete=삭제 (Automatic Translation)
+deleting-slas-will-reflect-on-report-data=Sla를 삭제 하면 보고서 데이터에 반영 됩니다. 이 작업은 취소할 수 없습니다. 당신은 그것을 영구적으로 삭제 하 시겠습니까? (Automatic Translation)
+description=설명 (Automatic Translation)
+duration=기간 (Automatic Translation)
+duration-time=기간 시간 (Automatic Translation)
+edit=편집 (Automatic Translation)
+enter-a-whole-number=정수를 입력 합니다. (Automatic Translation)
+enter-at-least-one-of-the-following-fields=다음 필드 중 하나 이상을 입력 합니다. (Automatic Translation)
 entries=항목 (Automatic Translation)
+error=오류: (Automatic Translation)
+hours=시간 (Automatic Translation)
+hours-abbreviation=h (Automatic Translation)
+hours-must-be-between=시간 00시, 24시 사이 여야 합니다. (Automatic Translation)
+instances-in-this-process-are-being-updated-according-to-sla-changes=이 과정에서 인스턴스 SLA 변화에 따라 업데이트 됩니다. (Automatic Translation)
 items=항목 (Automatic Translation)
 metrics=통계 (Automatic Translation)
+minutes=분 (Automatic Translation)
+minutes-abbreviation=분 (Automatic Translation)
+name=이름 (Automatic Translation)
+new-sla=새로운 SLA (Automatic Translation)
 next=다음 (Automatic Translation)
 no-current-metrics=아니 현재 통계 (Automatic Translation)
+no-current-slas=아니 현재 Sla (Automatic Translation)
 no-results-were-found=결과가 발견 됐다. (Automatic Translation)
 on-time=정각에 (Automatic Translation)
 once-there-are-active-processes-metrics-will-appear-here=일단 활성 프로세스, 통계는 여기 표시 됩니다. (Automatic Translation)
 open-processes-summary=오픈 프로세스 요약 (Automatic Translation)
 overdue=연체 (Automatic Translation)
+please-enter-at-least-one-of-the-fields=필드 중 하나 이상을 입력 하십시오. (Automatic Translation)
+please-fill-in-the-required-fields=필수 필드에 기입 하십시오. (Automatic Translation)
+please-try-another-name=다른 이름을 시도해 보시기 바랍니다. (Automatic Translation)
 previous=이전 (Automatic Translation)
 process-name=프로세스 이름 (Automatic Translation)
+reports=보고서 (Automatic Translation)
+save=저장 (Automatic Translation)
 search-for=에 대 한 검색... (Automatic Translation)
+set-up-slas=Sla를 설정 (Automatic Translation)
 showing=표시 (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+sla-definition=SLA 정의 (Automatic Translation)
+sla-name=SLA 이름 (Automatic Translation)
+sla-was-deleted=SLA는 삭제 했습니다. (Automatic Translation)
+slas=Sla (Automatic Translation)
 the-job-interval-must-be-greater-than-0=작업 간격 0 보다 커야 합니다. (Automatic Translation)
 total-open=총 오픈 (Automatic Translation)
+total-pending=보류 중인 총 (Automatic Translation)
+updating=업데이트: (Automatic Translation)
+value-must-be-an-integer-above-x=Value must be an integer above {0}. (Automatic Copy)
 workflow-metrics-configuration-name=워크플로 메트릭 (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
