--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_lt.properties
@@ -1,25 +1,60 @@
 a-duration-time-is-required=Yra laikas, reikalingas. (Automatic Translation)
 a-name-is-required=Vardas yra būtinas. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=Su SLA tokiu pačiu pavadinimu jau yra. (Automatic Translation)
+cancel=Atšaukti (Automatic Translation)
 check-sla-job-interval=Patikrinkite, ar SLA darbo intervalo (Automatic Translation)
 check-sla-job-interval-description=Nustatyti darbo intervalas minutėmis. (Automatic Translation)
+days=Dienų (Automatic Translation)
+days-abbreviation=d (Automatic Translation)
+define-a-duration-time-to-be-met=Nustatyti trukmės laikas turi būti laikomasi. (Automatic Translation)
+delete=Naikinti (Automatic Translation)
+deleting-slas-will-reflect-on-report-data=Panaikinus SLA apsvarstys ataskaitos duomenis. Šis veiksmas negali būti atšauktas. Ar tikrai norite visam laikui jį panaikinti? (Automatic Translation)
+description=Aprašymas (Automatic Translation)
+duration=Trukmė (Automatic Translation)
+duration-time=Laikas (Automatic Translation)
+edit=Redaguoti (Automatic Translation)
+enter-a-whole-number=Įveskite sveikąjį skaičių. (Automatic Translation)
+enter-at-least-one-of-the-following-fields=Įveskite bent vieną iš šių laukų. (Automatic Translation)
 entries=Įrašai (Automatic Translation)
+error=Klaida: (Automatic Translation)
+hours=Valandų (Automatic Translation)
+hours-abbreviation=h (Automatic Translation)
+hours-must-be-between=Valandas turi būti nuo 00:00 iki 24:00. (Automatic Translation)
+instances-in-this-process-are-being-updated-according-to-sla-changes=Atvejai, šis procesas yra atnaujinamas pagal SLA pakeitimus. (Automatic Translation)
 items=Elementai (Automatic Translation)
 metrics=Metrika (Automatic Translation)
+minutes=Minučių (Automatic Translation)
+minutes-abbreviation=min (Automatic Translation)
+name=vardas, pavadinimas (Automatic Translation)
+new-sla=Nauja SLA (Automatic Translation)
 next=Kitas (Automatic Translation)
 no-current-metrics=Nėra dabartinio metrika (Automatic Translation)
+no-current-slas=Nėra dabartinio SLA (Automatic Translation)
 no-results-were-found=Rezultatų nerasta. (Automatic Translation)
 on-time=Laiku (Automatic Translation)
 once-there-are-active-processes-metrics-will-appear-here=Kai aktyvius procesus, rodikliai bus rodomas čia. (Automatic Translation)
 open-processes-summary=Atviri procesai santrauka (Automatic Translation)
 overdue=Vėluojančių (Automatic Translation)
+please-enter-at-least-one-of-the-fields=Prašome įvesti bent vieną iš laukų. (Automatic Translation)
+please-fill-in-the-required-fields=Prašome užpildyti privalomus laukus. (Automatic Translation)
+please-try-another-name=Bandykite kitą pavadinimą. (Automatic Translation)
 previous=Ankstesnis (Automatic Translation)
 process-name=Proceso pavadinimas (Automatic Translation)
+reports=Ataskaitos (Automatic Translation)
+save=Išsaugoti (Automatic Translation)
 search-for=Paieška... (Automatic Translation)
+set-up-slas=Nustatyti SLA (Automatic Translation)
 showing=Rodo (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+sla-definition=SLA apibrėžimas (Automatic Translation)
+sla-name=SLA pavadinimas (Automatic Translation)
+sla-was-deleted=SLA buvo panaikintas. (Automatic Translation)
+slas=SLA (Automatic Translation)
 the-job-interval-must-be-greater-than-0=Darbo laiko tarpas turi būti didesnis už 0. (Automatic Translation)
 total-open=Visos atviros (Automatic Translation)
+total-pending=Iš viso laukiama (Automatic Translation)
+updating=Atnaujinimas: (Automatic Translation)
+value-must-be-an-integer-above-x=Value must be an integer above {0}. (Automatic Copy)
 workflow-metrics-configuration-name=Darbo eigos metrika (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
