--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_pl.properties
@@ -1,25 +1,60 @@
 a-duration-time-is-required=Czas trwania jest wymagane. (Automatic Translation)
 a-name-is-required=Nazwa jest wymagana. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=Umowy SLA o tej samej nazwie już istnieje. (Automatic Translation)
+cancel=Anuluj (Automatic Translation)
 check-sla-job-interval=Zaznacz interwał zadanie SLA (Automatic Translation)
 check-sla-job-interval-description=Ustaw interwał zadanie w minutach. (Automatic Translation)
+days=Dni (Automatic Translation)
+days-abbreviation=d (Automatic Translation)
+define-a-duration-time-to-be-met=Zdefiniuj czas trwania muszą być spełnione. (Automatic Translation)
+delete=Usuń (Automatic Translation)
+deleting-slas-will-reflect-on-report-data=Usuwanie SLA odbije się na danych raportu. Tej akcji nie można cofnąć. Czy na pewno chcesz trwale usunąć to? (Automatic Translation)
+description=Opis (Automatic Translation)
+duration=Czas trwania (Automatic Translation)
+duration-time=Czas trwania (Automatic Translation)
+edit=Edycja (Automatic Translation)
+enter-a-whole-number=Wprowadź liczbę całkowitą. (Automatic Translation)
+enter-at-least-one-of-the-following-fields=Wprowadź co najmniej jeden z następujących pól. (Automatic Translation)
 entries=Wpisy (Automatic Translation)
+error=Błąd: (Automatic Translation)
+hours=Godzin (Automatic Translation)
+hours-abbreviation=h (Automatic Translation)
+hours-must-be-between=Godzin musi być między 00:00 a 24:00. (Automatic Translation)
+instances-in-this-process-are-being-updated-according-to-sla-changes=Wystąpienia w tym procesie są aktualizowane zgodnie ze zmianami umowy SLA. (Automatic Translation)
 items=Elementy (Automatic Translation)
 metrics=Metryki (Automatic Translation)
+minutes=Minut (Automatic Translation)
+minutes-abbreviation=min (Automatic Translation)
+name=Nazwa (Automatic Translation)
+new-sla=Nową umowę SLA (Automatic Translation)
 next=Następny (Automatic Translation)
 no-current-metrics=Nie aktualne wskaźniki (Automatic Translation)
+no-current-slas=Nie bieżących umów SLA (Automatic Translation)
 no-results-were-found=Brak wyników. (Automatic Translation)
 on-time=Na czas (Automatic Translation)
 once-there-are-active-processes-metrics-will-appear-here=Gdy istnieją aktywne procesy, metryki pojawi się tutaj. (Automatic Translation)
 open-processes-summary=Krótki opis otwartych procesów (Automatic Translation)
 overdue=Zaległych (Automatic Translation)
+please-enter-at-least-one-of-the-fields=Wpisz co najmniej jedno z pól. (Automatic Translation)
+please-fill-in-the-required-fields=Proszę wypełnić wymagane pola. (Automatic Translation)
+please-try-another-name=Spróbuj innej nazwy. (Automatic Translation)
 previous=Poprzedni (Automatic Translation)
 process-name=Nazwa procesu (Automatic Translation)
+reports=Raporty (Automatic Translation)
+save=Zapisz (Automatic Translation)
 search-for=Szukaj... (Automatic Translation)
+set-up-slas=Konfiguracja umów SLA (Automatic Translation)
 showing=Wyświetlono (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+sla-definition=Definicja SLA (Automatic Translation)
+sla-name=Nazwa umowy SLA (Automatic Translation)
+sla-was-deleted=SLA został usunięty. (Automatic Translation)
+slas=SLA (Automatic Translation)
 the-job-interval-must-be-greater-than-0=Interwał zadanie musi być większa niż 0. (Automatic Translation)
 total-open=Otwórz łącznych (Automatic Translation)
+total-pending=Wszystkie oczekujące (Automatic Translation)
+updating=Aktualizacja: (Automatic Translation)
+value-must-be-an-integer-above-x=Value must be an integer above {0}. (Automatic Copy)
 workflow-metrics-configuration-name=Wskaźniki przepływu pracy (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
