--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_pt_PT.properties
@@ -1,25 +1,60 @@
 a-duration-time-is-required=É necessário um tempo de duração. (Automatic Translation)
 a-name-is-required=Um nome é necessário. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=Um SLA com o mesmo nome já existe. (Automatic Translation)
+cancel=Cancelar (Automatic Translation)
 check-sla-job-interval=Verificar o intervalo de trabalho de SLA (Automatic Translation)
 check-sla-job-interval-description=Defina o intervalo de trabalho em minutos. (Automatic Translation)
+days=Dias (Automatic Translation)
+days-abbreviation=d (Automatic Translation)
+define-a-duration-time-to-be-met=Defina um tempo de duração a serem cumpridas. (Automatic Translation)
+delete=Excluir (Automatic Translation)
+deleting-slas-will-reflect-on-report-data=Exclusão de SLAs refletirá sobre dados de relatório. Esta ação não pode ser desfeita. Tens a certeza de que deseja excluí-lo permanentemente? (Automatic Translation)
+description=Descrição (Automatic Translation)
+duration=Duração (Automatic Translation)
+duration-time=Tempo de duração (Automatic Translation)
+edit=Editar (Automatic Translation)
+enter-a-whole-number=Digite um número inteiro. (Automatic Translation)
+enter-at-least-one-of-the-following-fields=Insira pelo menos um dos seguintes campos. (Automatic Translation)
 entries=Entries (Automatic Copy)
+error=Erro: (Automatic Translation)
+hours=Horas (Automatic Translation)
+hours-abbreviation=h (Automatic Translation)
+hours-must-be-between=Horas devem ser entre 00:00 e 24:00. (Automatic Translation)
+instances-in-this-process-are-being-updated-according-to-sla-changes=Instâncias nesse processo estão sendo atualizadas de acordo com mudanças de SLA. (Automatic Translation)
 items=Items (Automatic Copy)
 metrics=Métricas de (Automatic Translation)
+minutes=Minutos (Automatic Translation)
+minutes-abbreviation=min (Automatic Translation)
+name=Nome (Automatic Translation)
+new-sla=SLA de novo (Automatic Translation)
 next=Next (Automatic Copy)
 no-current-metrics=No Current Metrics (Automatic Copy)
+no-current-slas=Nenhuma corrente SLAs (Automatic Translation)
 no-results-were-found=Não foram encontrados resultados. (Automatic Translation)
 on-time=On Time (Automatic Copy)
 once-there-are-active-processes-metrics-will-appear-here=Once there are active processes, metrics will appear here. (Automatic Copy)
 open-processes-summary=Open Processes Summary (Automatic Copy)
 overdue=Overdue (Automatic Copy)
+please-enter-at-least-one-of-the-fields=Por favor, insira pelo menos um dos campos. (Automatic Translation)
+please-fill-in-the-required-fields=Por favor, preencha os campos obrigatórios. (Automatic Translation)
+please-try-another-name=Por favor, tente outro nome. (Automatic Translation)
 previous=Previous (Automatic Copy)
 process-name=Process Name (Automatic Copy)
+reports=Relatórios (Automatic Translation)
+save=Salvar (Automatic Translation)
 search-for=Procurar por... (Automatic Translation)
+set-up-slas=Configurar os SLAs (Automatic Translation)
 showing=Showing (Automatic Copy)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+sla-definition=Definição de SLA (Automatic Translation)
+sla-name=Nome de SLA (Automatic Translation)
+sla-was-deleted=SLA foi excluído. (Automatic Translation)
+slas=SLAs (Automatic Translation)
 the-job-interval-must-be-greater-than-0=O intervalo de trabalho deve ser maior que 0. (Automatic Translation)
 total-open=Total Open (Automatic Copy)
+total-pending=Total pendentes (Automatic Translation)
+updating=Atualização: (Automatic Translation)
+value-must-be-an-integer-above-x=Value must be an integer above {0}. (Automatic Copy)
 workflow-metrics-configuration-name=Métricas de fluxo de trabalho (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
