--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ro.properties
@@ -1,25 +1,60 @@
 a-duration-time-is-required=O durata de timp este necesar. (Automatic Translation)
 a-name-is-required=Un nume este necesară. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=O SLA cu acelaşi nume există deja. (Automatic Translation)
+cancel=Revocare (Automatic Translation)
 check-sla-job-interval=Verificaţi intervalul de Job SLA (Automatic Translation)
 check-sla-job-interval-description=Setaţi intervalul de job în câteva minute. (Automatic Translation)
+days=Zile (Automatic Translation)
+days-abbreviation=d (Automatic Translation)
+define-a-duration-time-to-be-met=Definesc durata de timp să fie îndeplinite. (Automatic Translation)
+delete=Şterge (Automatic Translation)
+deleting-slas-will-reflect-on-report-data=Ştergerea SLA va reflecta asupra datelor. Această acţiune nu poate fi anulată. Sunteţi sigur că doriţi să ştergeţi-l definitiv? (Automatic Translation)
+description=Descriere (Automatic Translation)
+duration=Durata (Automatic Translation)
+duration-time=Durata timp (Automatic Translation)
+edit=Editare (Automatic Translation)
+enter-a-whole-number=Introduceți un număr întreg. (Automatic Translation)
+enter-at-least-one-of-the-following-fields=Introduceţi cel puţin unul dintre următoarele domenii. (Automatic Translation)
 entries=Intrări (Automatic Translation)
+error=Eroare: (Automatic Translation)
+hours=Ore (Automatic Translation)
+hours-abbreviation=h (Automatic Translation)
+hours-must-be-between=Ore trebuie să fie între 00:00 şi 24:00. (Automatic Translation)
+instances-in-this-process-are-being-updated-according-to-sla-changes=Cazuri în acest proces sunt fiind actualizate în funcţie de modificările de SLA. (Automatic Translation)
 items=Elemente (Automatic Translation)
 metrics=Măsurătorile (Automatic Translation)
+minutes=Minute (Automatic Translation)
+minutes-abbreviation=min (Automatic Translation)
+name=nume (Automatic Translation)
+new-sla=Noi SLA (Automatic Translation)
 next=Următoarea (Automatic Translation)
 no-current-metrics=Nici un curent de măsurare (Automatic Translation)
+no-current-slas=Nu curent SLA (Automatic Translation)
 no-results-were-found=S-au găsit nici un rezultat. (Automatic Translation)
 on-time=Pe timp (Automatic Translation)
 once-there-are-active-processes-metrics-will-appear-here=Odată ce există proceselor active, măsurători va apărea aici. (Automatic Translation)
 open-processes-summary=Procese deschise-Scurta descriere (Automatic Translation)
 overdue=Restante (Automatic Translation)
+please-enter-at-least-one-of-the-fields=Vă rugăm să introduceţi cel puţin unul din câmpuri. (Automatic Translation)
+please-fill-in-the-required-fields=Vă rugăm să completaţi câmpurile necesare. (Automatic Translation)
+please-try-another-name=Vă rugăm să încercaţi un alt nume. (Automatic Translation)
 previous=Anterioare (Automatic Translation)
 process-name=Nume de proces (Automatic Translation)
+reports=Rapoarte (Automatic Translation)
+save=Salva (Automatic Translation)
 search-for=Cauta... (Automatic Translation)
+set-up-slas=Înfiinţat de SLA (Automatic Translation)
 showing=Care prezintă (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+sla-definition=Definiţie de SLA (Automatic Translation)
+sla-name=Numele de SLA (Automatic Translation)
+sla-was-deleted=SLA a fost şters. (Automatic Translation)
+slas=SLA (Automatic Translation)
 the-job-interval-must-be-greater-than-0=Intervalul de job trebuie să fie mai mare decât 0. (Automatic Translation)
 total-open=Total deschis (Automatic Translation)
+total-pending=Total în aşteptare (Automatic Translation)
+updating=Actualizarea: (Automatic Translation)
+value-must-be-an-integer-above-x=Value must be an integer above {0}. (Automatic Copy)
 workflow-metrics-configuration-name=Măsurătorile de flux de lucru (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
