--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_sl.properties
@@ -1,25 +1,60 @@
 a-duration-time-is-required=Čas trajanja je potrebno. (Automatic Translation)
 a-name-is-required=Ime je potrebno. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=SLA z istim imenom že obstaja. (Automatic Translation)
+cancel=Prekliči (Automatic Translation)
 check-sla-job-interval=Preverite SLA delo Interval (Automatic Translation)
 check-sla-job-interval-description=Želite delo interval v minutah. (Automatic Translation)
+days=Dni (Automatic Translation)
+days-abbreviation=d (Automatic Translation)
+define-a-duration-time-to-be-met=Določite čas trajanja izpolnjene. (Automatic Translation)
+delete=Izbrisati (Automatic Translation)
+deleting-slas-will-reflect-on-report-data=Brisanje SLA bo odražala na podatke. Tega dejanja ni mogoče razveljaviti. Ali ste prepričani, da želite trajno izbrisati? (Automatic Translation)
+description=Opis (Automatic Translation)
+duration=Trajanje (Automatic Translation)
+duration-time=Čas trajanja (Automatic Translation)
+edit=Urejanje (Automatic Translation)
+enter-a-whole-number=Vnesite celo število. (Automatic Translation)
+enter-at-least-one-of-the-following-fields=Vnesite vsaj enega od naslednjih polj. (Automatic Translation)
 entries=Postavke (Automatic Translation)
+error=Napaka: (Automatic Translation)
+hours=Ur (Automatic Translation)
+hours-abbreviation=h (Automatic Translation)
+hours-must-be-between=Ur mora biti med 00:00 do 24:00. (Automatic Translation)
+instances-in-this-process-are-being-updated-according-to-sla-changes=Primerih v tem procesu so posodablja glede sprememb SLA. (Automatic Translation)
 items=Elementi (Automatic Translation)
 metrics=Meritve (Automatic Translation)
+minutes=Minut (Automatic Translation)
+minutes-abbreviation=min (Automatic Translation)
+name=ime (Automatic Translation)
+new-sla=Nov SLA (Automatic Translation)
 next=Naslednji (Automatic Translation)
 no-current-metrics=Ni sedanje meritve (Automatic Translation)
+no-current-slas=Ni trenutni SLA (Automatic Translation)
 no-results-were-found=Ni zadetkov. (Automatic Translation)
 on-time=Pravočasno (Automatic Translation)
 once-there-are-active-processes-metrics-will-appear-here=Ko so aktivni proces, meritve prikazane tukaj. (Automatic Translation)
 open-processes-summary=Odprtih procesi Povzetek (Automatic Translation)
 overdue=Zapadle (Automatic Translation)
+please-enter-at-least-one-of-the-fields=Prosimo, vnesite vsaj eno od polj. (Automatic Translation)
+please-fill-in-the-required-fields=Izpolnite zahtevana polja. (Automatic Translation)
+please-try-another-name=Poskusite drugo ime. (Automatic Translation)
 previous=Prejšnje (Automatic Translation)
 process-name=Ime procesa (Automatic Translation)
+reports=Poročila (Automatic Translation)
+save=Shrani (Automatic Translation)
 search-for=Iskanje... (Automatic Translation)
+set-up-slas=Ustanovljena SLA (Automatic Translation)
 showing=Ki prikazuje (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+sla-definition=SLA opredelitev (Automatic Translation)
+sla-name=Ime SLA (Automatic Translation)
+sla-was-deleted=SLA je bila izbrisana. (Automatic Translation)
+slas=SLA (Automatic Translation)
 the-job-interval-must-be-greater-than-0=Delo interval mora biti večja od 0. (Automatic Translation)
 total-open=Skupni plan (Automatic Translation)
+total-pending=Skupaj čakajočih (Automatic Translation)
+updating=Posodabljanje: (Automatic Translation)
+value-must-be-an-integer-above-x=Value must be an integer above {0}. (Automatic Copy)
 workflow-metrics-configuration-name=Potek dela meritve (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
