--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_th.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_th.properties
@@ -1,25 +1,60 @@
 a-duration-time-is-required=จำเป็นต้องมีระยะเวลา (Automatic Translation)
 a-name-is-required=ชื่อถูกต้อง (Automatic Translation)
 an-sla-with-the-same-name-already-exists=SLA ด้วยชื่อเดียวกันอยู่แล้ว (Automatic Translation)
+cancel=ยกเลิก (Automatic Translation)
 check-sla-job-interval=ตรวจสอบช่วงเวลางาน SLA (Automatic Translation)
 check-sla-job-interval-description=กำหนดงานช่วงนาทีที่แล้ว (Automatic Translation)
+days=วัน (Automatic Translation)
+days-abbreviation=d (Automatic Translation)
+define-a-duration-time-to-be-met=กำหนดเวลาของช่วงเวลาที่จะได้พบ (Automatic Translation)
+delete=ลบ (Automatic Translation)
+deleting-slas-will-reflect-on-report-data=การลบ Sla จะสะท้อนข้อมูลรายงาน การกระทำนี้ไม่สามารถเลิกทำ คุณแน่ใจว่าต้องการลบอย่างถาวร (Automatic Translation)
+description=คำอธิบาย (Automatic Translation)
+duration=ระยะเวลา (Automatic Translation)
+duration-time=ระยะเวลา (Automatic Translation)
+edit=แก้ไข (Automatic Translation)
+enter-a-whole-number=ใส่จำนวนเต็ม (Automatic Translation)
+enter-at-least-one-of-the-following-fields=ป้อนฟิลด์ต่อไปนี้อย่างน้อยหนึ่ง (Automatic Translation)
 entries=รายการ (Automatic Translation)
+error=ข้อผิดพลาด: (Automatic Translation)
+hours=ชั่วโมง (Automatic Translation)
+hours-abbreviation=ชม (Automatic Translation)
+hours-must-be-between=ชั่วโมงต้องระหว่างเวลา 00:00-24:00 (Automatic Translation)
+instances-in-this-process-are-being-updated-according-to-sla-changes=อินสแตนซ์ในกระบวนการนี้กำลังถูกปรับปรุงตามการเปลี่ยนแปลงของ SLA (Automatic Translation)
 items=รายการ (Automatic Translation)
 metrics=ตัวชี้วัด (Automatic Translation)
+minutes=นาที (Automatic Translation)
+minutes-abbreviation=นาที (Automatic Translation)
+name=ชื่อ (Automatic Translation)
+new-sla=SLA ใหม่ (Automatic Translation)
 next=ถัดไป (Automatic Translation)
 no-current-metrics=ไม่มีวัดปัจจุบัน (Automatic Translation)
+no-current-slas=ไม่มี Sla ปัจจุบัน (Automatic Translation)
 no-results-were-found=ไม่พบผลลัพธ์ (Automatic Translation)
 on-time=ในเวลาที่ (Automatic Translation)
 once-there-are-active-processes-metrics-will-appear-here=เมื่อมีกระบวนการทำงาน การวัดจะปรากฏที่นี่ (Automatic Translation)
 open-processes-summary=สรุปกระบวนการเปิด (Automatic Translation)
 overdue=เกินกำหนด (Automatic Translation)
+please-enter-at-least-one-of-the-fields=กรุณาระบุอย่างน้อยหนึ่งเขตข้อมูล (Automatic Translation)
+please-fill-in-the-required-fields=กรุณากรอกข้อมูลในฟิลด์ที่จำเป็น (Automatic Translation)
+please-try-another-name=โปรดลองใช้ชื่ออื่น (Automatic Translation)
 previous=ก่อนหน้านี้ (Automatic Translation)
 process-name=ชื่อกระบวนการ (Automatic Translation)
+reports=รายงาน (Automatic Translation)
+save=บันทึก (Automatic Translation)
 search-for=ค้นหา... (Automatic Translation)
+set-up-slas=ตั้งค่า Sla (Automatic Translation)
 showing=แสดง (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+sla-definition=ข้อกำหนด SLA (Automatic Translation)
+sla-name=ชื่อ SLA (Automatic Translation)
+sla-was-deleted=SLA ถูกลบ (Automatic Translation)
+slas=Sla (Automatic Translation)
 the-job-interval-must-be-greater-than-0=งานช่วงเวลาต้องมากกว่า 0 (Automatic Translation)
 total-open=เปิดทั้งหมด (Automatic Translation)
+total-pending=รวมค้างอยู่ (Automatic Translation)
+updating=ปรับปรุง: (Automatic Translation)
+value-must-be-an-integer-above-x=Value must be an integer above {0}. (Automatic Copy)
 workflow-metrics-configuration-name=การวัดกระแส (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
