--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_tr.properties
@@ -1,25 +1,60 @@
 a-duration-time-is-required=Bir süre zaman gereklidir. (Automatic Translation)
 a-name-is-required=Bir adı gereklidir. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=Bir SLA aynı adla zaten var. (Automatic Translation)
+cancel=İptal (Automatic Translation)
 check-sla-job-interval=SLA iş aralığı kontrol (Automatic Translation)
 check-sla-job-interval-description=İş aralığı dakika olarak ayarlayın. (Automatic Translation)
+days=Gün (Automatic Translation)
+days-abbreviation=d (Automatic Translation)
+define-a-duration-time-to-be-met=Yerine getirilmesi için bir süre zaman tanımlayın. (Automatic Translation)
+delete=Sil (Automatic Translation)
+deleting-slas-will-reflect-on-report-data=SLA silme rapor verilerini yansıtır. Bu eylem geri alınamaz. Kalıcı olarak silmek istediğinizden emin misiniz? (Automatic Translation)
+description=Açıklama (Automatic Translation)
+duration=Süresi (Automatic Translation)
+duration-time=Süresini (Automatic Translation)
+edit=Düzenle (Automatic Translation)
+enter-a-whole-number=Bir tamsayı girin. (Automatic Translation)
+enter-at-least-one-of-the-following-fields=Aşağıdaki alanlardan en az birini girin. (Automatic Translation)
 entries=Girişleri (Automatic Translation)
+error=Hata: (Automatic Translation)
+hours=Saat (Automatic Translation)
+hours-abbreviation=h (Automatic Translation)
+hours-must-be-between=Saat 00:00 ile 24:00 arasında olmalıdır. (Automatic Translation)
+instances-in-this-process-are-being-updated-according-to-sla-changes=Bu süreçte örnekleri göre SLA değişiklikler güncelleştiriliyor. (Automatic Translation)
 items=Öğeleri (Automatic Translation)
 metrics=Ölçümleri (Automatic Translation)
+minutes=Dakika (Automatic Translation)
+minutes-abbreviation=min (Automatic Translation)
+name=Adı (Automatic Translation)
+new-sla=Yeni SLA (Automatic Translation)
 next=Sonraki (Automatic Translation)
 no-current-metrics=Hiçbir geçerli ölçümleri (Automatic Translation)
+no-current-slas=Hiçbir geçerli SLA (Automatic Translation)
 no-results-were-found=Sonuç bulunamadı. (Automatic Translation)
 on-time=Vaktinde (Automatic Translation)
 once-there-are-active-processes-metrics-will-appear-here=Etkin işlemler olduğunda, ölçümler burada görünür. (Automatic Translation)
 open-processes-summary=Açık işlemler Özeti (Automatic Translation)
 overdue=Vadesi geçmiş (Automatic Translation)
+please-enter-at-least-one-of-the-fields=Alanlardan en az birini giriniz. (Automatic Translation)
+please-fill-in-the-required-fields=Lütfen gerekli alanları doldurun. (Automatic Translation)
+please-try-another-name=Lütfen başka bir ad deneyin. (Automatic Translation)
 previous=Önceki (Automatic Translation)
 process-name=İşlem adı (Automatic Translation)
+reports=Raporları (Automatic Translation)
+save=Kaydet (Automatic Translation)
 search-for=Arama için... (Automatic Translation)
+set-up-slas=SLA ayarla (Automatic Translation)
 showing=Gösterilen (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+sla-definition=SLA tanımı (Automatic Translation)
+sla-name=SLA adı (Automatic Translation)
+sla-was-deleted=SLA silindi. (Automatic Translation)
+slas=SLA (Automatic Translation)
 the-job-interval-must-be-greater-than-0=İş aralığı 0'dan büyük olmalıdır. (Automatic Translation)
 total-open=Toplam açık (Automatic Translation)
+total-pending=Bekleyen toplam (Automatic Translation)
+updating=Güncelleme: (Automatic Translation)
+value-must-be-an-integer-above-x=Value must be an integer above {0}. (Automatic Copy)
 workflow-metrics-configuration-name=İş akışı ölçümleri (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
