--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_uk.properties
@@ -1,25 +1,60 @@
 a-duration-time-is-required=Тривалість часу не потрібно. (Automatic Translation)
 a-name-is-required=Ім'я вимагається. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=SLA із таким іменем уже існує. (Automatic Translation)
+cancel="Скасувати" (Automatic Translation)
 check-sla-job-interval=Перевірити роботу SLA інтервал (Automatic Translation)
 check-sla-job-interval-description=Встановити інтервал роботу в лічені хвилини. (Automatic Translation)
+days=Днів (Automatic Translation)
+days-abbreviation=d (Automatic Translation)
+define-a-duration-time-to-be-met=Визначити тривалість часу, щоб бути задоволені. (Automatic Translation)
+delete=Видалити (Automatic Translation)
+deleting-slas-will-reflect-on-report-data=Видалення SLA позначиться на дані звітів. Цю дію скасувати не можна. Ви дійсно бажаєте видалити його остаточно? (Automatic Translation)
+description=Опис (Automatic Translation)
+duration=Тривалість (Automatic Translation)
+duration-time=Тривалість часу (Automatic Translation)
+edit=Редагувати (Automatic Translation)
+enter-a-whole-number=Введіть ціле число. (Automatic Translation)
+enter-at-least-one-of-the-following-fields=Введіть принаймні один з наступних сферах діяльності. (Automatic Translation)
 entries=Записи (Automatic Translation)
+error=Помилка: (Automatic Translation)
+hours=Годин (Automatic Translation)
+hours-abbreviation=h (Automatic Translation)
+hours-must-be-between=Годин повинен бути з 00:00 до 24:00. (Automatic Translation)
+instances-in-this-process-are-being-updated-according-to-sla-changes=Випадки, в цьому процесі оновлюються згідно SLA зміни. (Automatic Translation)
 items=Елементи (Automatic Translation)
 metrics=Метрики (Automatic Translation)
+minutes=Хвилин (Automatic Translation)
+minutes-abbreviation=хв (Automatic Translation)
+name=Ім'я (Automatic Translation)
+new-sla=Нові SLA (Automatic Translation)
 next=Наступний (Automatic Translation)
 no-current-metrics=Немає поточної метрики (Automatic Translation)
+no-current-slas=Немає поточної SLA (Automatic Translation)
 no-results-were-found=Результатів не знайдено. (Automatic Translation)
 on-time=Вчасно (Automatic Translation)
 once-there-are-active-processes-metrics-will-appear-here=Як тільки там активних процесів, тут з'являться метрики. (Automatic Translation)
 open-processes-summary=Відкриті процеси резюме (Automatic Translation)
 overdue=Прострочені (Automatic Translation)
+please-enter-at-least-one-of-the-fields=Будь ласка, введіть принаймні одне з полів. (Automatic Translation)
+please-fill-in-the-required-fields=Заповніть будь ласка обов'язкові поля. (Automatic Translation)
+please-try-another-name=Будь ласка, спробуйте ще одне ім'я. (Automatic Translation)
 previous=Попередній (Automatic Translation)
 process-name=Ім'я процесу (Automatic Translation)
+reports=Звіти (Automatic Translation)
+save=Зберегти (Automatic Translation)
 search-for=Шукати... (Automatic Translation)
+set-up-slas=Настроювання SLA (Automatic Translation)
 showing=Показ (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+sla-definition=SLA визначення (Automatic Translation)
+sla-name=SLA ім'я (Automatic Translation)
+sla-was-deleted=SLA було видалено. (Automatic Translation)
+slas=SLA (Automatic Translation)
 the-job-interval-must-be-greater-than-0=Інтервал робота має бути більшим за 0. (Automatic Translation)
 total-open=Загальна відкритим (Automatic Translation)
+total-pending=Загальна очікування (Automatic Translation)
+updating=Оновлення: (Automatic Translation)
+value-must-be-an-integer-above-x=Value must be an integer above {0}. (Automatic Copy)
 workflow-metrics-configuration-name=Робочий процес метрики (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
