--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_vi.properties
@@ -1,25 +1,60 @@
 a-duration-time-is-required=Một thời gian thời gian là cần thiết. (Automatic Translation)
 a-name-is-required=Tên là bắt buộc. (Automatic Translation)
 an-sla-with-the-same-name-already-exists=Một SLA có cùng tên đã tồn tại. (Automatic Translation)
+cancel=Hủy bỏ (Automatic Translation)
 check-sla-job-interval=Kiểm tra xem khoảng thời gian công việc SLA (Automatic Translation)
 check-sla-job-interval-description=Thiết lập khoảng thời gian công việc trong vài phút. (Automatic Translation)
+days=Ngày (Automatic Translation)
+days-abbreviation=d (Automatic Translation)
+define-a-duration-time-to-be-met=Xác định thời điểm thời gian để được đáp ứng. (Automatic Translation)
+delete=Xóa bỏ (Automatic Translation)
+deleting-slas-will-reflect-on-report-data=Xóa SLAs sẽ phản ánh trên báo cáo dữ liệu. Hành động này không thể hoàn tác. Bạn có chắc bạn muốn xóa bỏ hẳn nó không? (Automatic Translation)
+description=Mô tả (Automatic Translation)
+duration=Thời gian thực hiện (Automatic Translation)
+duration-time=Thời gian thực hiện thời gian (Automatic Translation)
+edit=Chỉnh sửa (Automatic Translation)
+enter-a-whole-number=Nhập một số nguyên. (Automatic Translation)
+enter-at-least-one-of-the-following-fields=Nhập ít nhất một trong các lĩnh vực sau đây. (Automatic Translation)
 entries=Mục (Automatic Translation)
+error=Lỗi: (Automatic Translation)
+hours=Giờ (Automatic Translation)
+hours-abbreviation=h (Automatic Translation)
+hours-must-be-between=Giờ phải từ 00:00 đến 24:00. (Automatic Translation)
+instances-in-this-process-are-being-updated-according-to-sla-changes=Trường hợp trong quá trình này đang được Cập Nhật theo SLA thay đổi. (Automatic Translation)
 items=Khoản mục (Automatic Translation)
 metrics=Số liệu (Automatic Translation)
+minutes=Phút (Automatic Translation)
+minutes-abbreviation=Min (Automatic Translation)
+name=Tên (Automatic Translation)
+new-sla=Mới SLA (Automatic Translation)
 next=Tiếp theo (Automatic Translation)
 no-current-metrics=Không có số liệu hiện nay (Automatic Translation)
+no-current-slas=Không có hiện tại SLAs (Automatic Translation)
 no-results-were-found=Không có kết quả được tìm thấy. (Automatic Translation)
 on-time=Đúng giờ (Automatic Translation)
 once-there-are-active-processes-metrics-will-appear-here=Một khi không có quá trình hoạt động, số liệu sẽ xuất hiện ở đây. (Automatic Translation)
 open-processes-summary=Tóm tắt quá trình mở (Automatic Translation)
 overdue=Quá hạn (Automatic Translation)
+please-enter-at-least-one-of-the-fields=Vui lòng nhập ít nhất một trong các lĩnh vực. (Automatic Translation)
+please-fill-in-the-required-fields=Xin vui lòng điền vào các trường bắt buộc. (Automatic Translation)
+please-try-another-name=Hãy thử một tên khác. (Automatic Translation)
 previous=Trước đó (Automatic Translation)
 process-name=Quá trình tên (Automatic Translation)
+reports=Báo cáo (Automatic Translation)
+save=Tiết kiệm (Automatic Translation)
 search-for=Tìm kiếm... (Automatic Translation)
+set-up-slas=Thiết lập SLAs (Automatic Translation)
 showing=Đang hiển thị (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+sla-definition=Định nghĩa SLA (Automatic Translation)
+sla-name=SLA tên (Automatic Translation)
+sla-was-deleted=SLA đã bị xóa bỏ. (Automatic Translation)
+slas=SLAs (Automatic Translation)
 the-job-interval-must-be-greater-than-0=Khoảng thời gian công việc phải lớn hơn 0. (Automatic Translation)
 total-open=Mở tất cả (Automatic Translation)
+total-pending=Tổng số đang chờ xử lý (Automatic Translation)
+updating=Cập Nhật: (Automatic Translation)
+value-must-be-an-integer-above-x=Value must be an integer above {0}. (Automatic Copy)
 workflow-metrics-configuration-name=Số liệu công việc (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
