--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_zh_CN.properties
@@ -1,25 +1,60 @@
 a-duration-time-is-required=持续时间为必填项。
 a-name-is-required=名称为必填项。
 an-sla-with-the-same-name-already-exists=已存在名称相同的服务水平协议。
+cancel=取消 (Automatic Translation)
 check-sla-job-interval=检查 sla 作业间隔 (Automatic Translation)
 check-sla-job-interval-description=以分钟为单位设置作业间隔。 (Automatic Translation)
+days=天 (Automatic Translation)
+days-abbreviation=D (Automatic Translation)
+define-a-duration-time-to-be-met=定义要满足的持续时间。 (Automatic Translation)
+delete=删除 (Automatic Translation)
+deleting-slas-will-reflect-on-report-data=删除 Sla 将反映报表数据。此操作无法撤消。确实要永久删除它吗？ (Automatic Translation)
+description=描述 (Automatic Translation)
+duration=时间 (Automatic Translation)
+duration-time=持续时间 (Automatic Translation)
+edit=编辑 (Automatic Translation)
+enter-a-whole-number=输入一个整数。 (Automatic Translation)
+enter-at-least-one-of-the-following-fields=至少输入以下字段之一。 (Automatic Translation)
 entries=条目
+error=错误： (Automatic Translation)
+hours=小时 (Automatic Translation)
+hours-abbreviation=H (Automatic Translation)
+hours-must-be-between=营业时间必须在00至24之间。 (Automatic Translation)
+instances-in-this-process-are-being-updated-according-to-sla-changes=此过程中的实例将根据 SLA 的更改进行更新。 (Automatic Translation)
 items=项
 metrics=指标
+minutes=分钟 (Automatic Translation)
+minutes-abbreviation=最小值 (Automatic Translation)
+name=名字 (Automatic Translation)
+new-sla=新 SLA (Automatic Translation)
 next=下一个
 no-current-metrics=没有当前指标
+no-current-slas=无当前 Sla (Automatic Translation)
 no-results-were-found=未找到结果。
 on-time=按时
 once-there-are-active-processes-metrics-will-appear-here=一旦存在活动进程，指标就会显示在这里。
 open-processes-summary=打开进程汇总
 overdue=过期
+please-enter-at-least-one-of-the-fields=请至少输入其中一个字段。 (Automatic Translation)
+please-fill-in-the-required-fields=请填写所需的字段。 (Automatic Translation)
+please-try-another-name=请尝试其他名称。 (Automatic Translation)
 previous=上一个
 process-name=进程名称
+reports=报告 (Automatic Translation)
+save=救 (Automatic Translation)
 search-for=搜索…
+set-up-slas=设置 Sla (Automatic Translation)
 showing=正在显示
 showing-x-to-x-of-x-entries=正在显示第 {0} - {1} 个条目，共 {2} 个。
+sla-definition=SLA 定义 (Automatic Translation)
+sla-name=SLA 名称 (Automatic Translation)
+sla-was-deleted=SLA 已被删除。 (Automatic Translation)
+slas=Sla (Automatic Translation)
 the-job-interval-must-be-greater-than-0=作业间隔必须大于0。 (Automatic Translation)
 total-open=打开总计
+total-pending=待处理总数 (Automatic Translation)
+updating=更新： (Automatic Translation)
+value-must-be-an-integer-above-x=Value must be an integer above {0}. (Automatic Copy)
 workflow-metrics-configuration-name=工作流指标 (Automatic Translation)
 x-item={0} 项
 x-items={0} 项
