--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_zh_TW.properties
@@ -1,25 +1,60 @@
 a-duration-time-is-required=持續時間是必需的。 (Automatic Translation)
 a-name-is-required=名稱是必需的。 (Automatic Translation)
 an-sla-with-the-same-name-already-exists=具有相同名稱的 sla 已存在。 (Automatic Translation)
+cancel=取消 (Automatic Translation)
 check-sla-job-interval=檢查 sla 作業間隔 (Automatic Translation)
 check-sla-job-interval-description=以分鐘為單位設置作業間隔。 (Automatic Translation)
+days=天 (Automatic Translation)
+days-abbreviation=D (Automatic Translation)
+define-a-duration-time-to-be-met=定義要滿足的持續時間。 (Automatic Translation)
+delete=刪除 (Automatic Translation)
+deleting-slas-will-reflect-on-report-data=刪除 Sla 將反映報表資料。此操作無法撤銷。確實要永久刪除它嗎？ (Automatic Translation)
+description=描述 (Automatic Translation)
+duration=時間 (Automatic Translation)
+duration-time=持續時間 (Automatic Translation)
+edit=編輯 (Automatic Translation)
+enter-a-whole-number=輸入一個整數。 (Automatic Translation)
+enter-at-least-one-of-the-following-fields=至少輸入以下欄位之一。 (Automatic Translation)
 entries=條目 (Automatic Translation)
+error=錯誤： (Automatic Translation)
+hours=小時 (Automatic Translation)
+hours-abbreviation=H (Automatic Translation)
+hours-must-be-between=上班時間必須在00至24之間。 (Automatic Translation)
+instances-in-this-process-are-being-updated-according-to-sla-changes=此過程中的實例將根據 SLA 的更改進行更新。 (Automatic Translation)
 items=專案 (Automatic Translation)
 metrics=指標 (Automatic Translation)
+minutes=分鐘 (Automatic Translation)
+minutes-abbreviation=最小值 (Automatic Translation)
+name=名字 (Automatic Translation)
+new-sla=新 SLA (Automatic Translation)
 next=下 (Automatic Translation)
 no-current-metrics=沒有當前指標 (Automatic Translation)
+no-current-slas=無當前 Sla (Automatic Translation)
 no-results-were-found=未找到任何結果。 (Automatic Translation)
 on-time=準時 (Automatic Translation)
 once-there-are-active-processes-metrics-will-appear-here=一旦有了活動進程, 指標就會出現在這裡。 (Automatic Translation)
 open-processes-summary=打開進程摘要 (Automatic Translation)
 overdue=過期 (Automatic Translation)
+please-enter-at-least-one-of-the-fields=請至少輸入其中一個欄位。 (Automatic Translation)
+please-fill-in-the-required-fields=請填寫所需的欄位。 (Automatic Translation)
+please-try-another-name=請嘗試其他名稱。 (Automatic Translation)
 previous=以前 (Automatic Translation)
 process-name=進程名稱 (Automatic Translation)
+reports=報告 (Automatic Translation)
+save=救 (Automatic Translation)
 search-for=搜索..。 (Automatic Translation)
+set-up-slas=設置 Sla (Automatic Translation)
 showing=顯示 (Automatic Translation)
 showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
+sla-definition=SLA 定義 (Automatic Translation)
+sla-name=SLA 名稱 (Automatic Translation)
+sla-was-deleted=SLA 已被刪除。 (Automatic Translation)
+slas=Sla (Automatic Translation)
 the-job-interval-must-be-greater-than-0=作業間隔必須大於0。 (Automatic Translation)
 total-open=開盤總冠軍 (Automatic Translation)
+total-pending=待處理總數 (Automatic Translation)
+updating=更新： (Automatic Translation)
+value-must-be-an-integer-above-x=Value must be an integer above {0}. (Automatic Copy)
 workflow-metrics-configuration-name=工作流指標 (Automatic Translation)
 x-item={0} Item (Automatic Copy)
 x-items={0} Items (Automatic Copy)
