LPS-77699 Update Translations

--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ar.properties
@@ -25,7 +25,7 @@ items=العناصر (Automatic Translation)
 metrics=المقاييس (Automatic Translation)
 minutes=دقيقة (Automatic Translation)
 minutes-abbreviation=دقيقة (Automatic Translation)
-name=الاسم (Automatic Translation)
+name=الاسم
 new-sla=جيش تحرير السودان الجديد (Automatic Translation)
 next=القادم (Automatic Translation)
 no-current-metrics=لا المقاييس الحالية (Automatic Translation)
