--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ca.properties
@@ -25,7 +25,7 @@ items=Elements
 metrics=Analítica web
 minutes=Minuts (Automatic Translation)
 minutes-abbreviation=min (Automatic Translation)
-name=Nom (Automatic Translation)
+name=Nom
 new-sla=SLA nou (Automatic Translation)
 next=Següent
 no-current-metrics=No hi ha analítica actual
