--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_es.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_es.properties
@@ -25,7 +25,7 @@ items=Elementos
 metrics=Métricas
 minutes=Minutos (Automatic Translation)
 minutes-abbreviation=min (Automatic Translation)
-name=Nombre (Automatic Translation)
+name=Nombre
 new-sla=SLA nueva (Automatic Translation)
 next=Siguiente
 no-current-metrics=Sin métricas actuales
