--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_fr.properties
@@ -1,60 +1,60 @@
 a-duration-time-is-required=Une durée est requise.
 a-name-is-required=Un nom est requis.
 an-sla-with-the-same-name-already-exists=Un SLA porte déjà ce nom.
-cancel=Annuler (Automatic Translation)
+cancel=Annuler
 check-sla-job-interval=Vérifier l'intervalle de travail SLA (Automatic Translation)
 check-sla-job-interval-description=Définissez l'intervalle de travail en quelques minutes. (Automatic Translation)
-days=Jours (Automatic Translation)
-days-abbreviation=d (Automatic Translation)
-define-a-duration-time-to-be-met=Définir une durée de temps à respecter. (Automatic Translation)
-delete=Supprimer (Automatic Translation)
-deleting-slas-will-reflect-on-report-data=Suppression des SLA reflétera sur données du rapport. Cette action ne peut pas être annulée. Êtes-vous sûr de que vouloir supprimer définitivement ? (Automatic Translation)
-description=Description (Automatic Translation)
-duration=Durée (Automatic Translation)
-duration-time=Temps de durée (Automatic Translation)
-edit=Edit (Automatic Translation)
-enter-a-whole-number=Entrez un nombre entier. (Automatic Translation)
-enter-at-least-one-of-the-following-fields=Entrez au moins un des champs suivants. (Automatic Translation)
+days=Jours
+days-abbreviation=j
+define-a-duration-time-to-be-met=Définissez une durée à atteindre.
+delete=Supprimer
+deleting-slas-will-reflect-on-report-data=Supprimer des SLA a une répercussion sur les données du rapport. Cette action ne peut être annulée. Voulez-vous vraiment le supprimer définitivement ?
+description=Description
+duration=Durée
+duration-time=Durée
+edit=Éditer
+enter-a-whole-number=Saisissez un nombre entier.
+enter-at-least-one-of-the-following-fields=Remplissez au moins un des champs suivants.
 entries=Entrées
-error=Erreur : (Automatic Translation)
-hours=Heures (Automatic Translation)
-hours-abbreviation=h (Automatic Translation)
-hours-must-be-between=Heures doivent être comprise entre 00:00 et 24 h 00. (Automatic Translation)
-instances-in-this-process-are-being-updated-according-to-sla-changes=Dans ce processus, les instances sont mises à jour selon les changements de SLA. (Automatic Translation)
+error=Erreur :
+hours=Heures
+hours-abbreviation=h
+hours-must-be-between=Les heures doivent être comprises entre 00:00 et 24:00.
+instances-in-this-process-are-being-updated-according-to-sla-changes=Les instances de ce processus sont actualisées en fonction des modifications du SLA.
 items=Articles
 metrics=Métriques
-minutes=Minutes (Automatic Translation)
-minutes-abbreviation=min (Automatic Translation)
-name=Nom (Automatic Translation)
-new-sla=Nouveau SLA (Automatic Translation)
+minutes=Minutes
+minutes-abbreviation=min
+name=Nom
+new-sla=Nouveau SLA
 next=Suivant
 no-current-metrics=Aucune métrique actuelle
-no-current-slas=Aucun cours SLA (Automatic Translation)
+no-current-slas=Aucun SLA actuel
 no-results-were-found=Aucun résultat trouvé.
 on-time=À temps
 once-there-are-active-processes-metrics-will-appear-here=Dès que des processus sont actifs, les métriques apparaissent ici.
 open-processes-summary=Résumé des processus ouverts
 overdue=En retard
-please-enter-at-least-one-of-the-fields=Veuillez saisir au moins un des champs. (Automatic Translation)
-please-fill-in-the-required-fields=Veuillez remplir les champs obligatoires. (Automatic Translation)
-please-try-another-name=Veuillez essayer un autre nom. (Automatic Translation)
+please-enter-at-least-one-of-the-fields=Veuillez remplir au moins un des champs.
+please-fill-in-the-required-fields=Veuillez remplir les champs obligatoires.
+please-try-another-name=Veuillez essayer un autre nom.
 previous=Précédent
 process-name=Nom du processus
-reports=Rapports (Automatic Translation)
-save=sauvegarder (Automatic Translation)
+reports=Rapports
+save=Enregistrer
 search-for=Rechercher...
-set-up-slas=Mettre en place de SLA (Automatic Translation)
+set-up-slas=Configurer des SLA
 showing=Affichage
 showing-x-to-x-of-x-entries=Affichage de {0} à {1} entrées sur {2}.
-sla-definition=SLA définition (Automatic Translation)
-sla-name=Nom de la SLA (Automatic Translation)
-sla-was-deleted=SLA a été supprimé. (Automatic Translation)
-slas=SLA (Automatic Translation)
+sla-definition=Définition du SLA
+sla-name=Nom du SLA
+sla-was-deleted=Le SLA a été supprimé.
+slas=SLA
 the-job-interval-must-be-greater-than-0=L'intervalle de travail doit être supérieure à 0. (Automatic Translation)
 total-open=Total ouvert
 total-pending=Total en attente (Automatic Translation)
-updating=Mise à jour : (Automatic Translation)
-value-must-be-an-integer-above-x=Value must be an integer above {0}. (Automatic Copy)
+updating=Mise à jour :
+value-must-be-an-integer-above-x=La valeur doit être un entier supérieur à {0}.
 workflow-metrics-configuration-name=Paramètres de flux de travail (Automatic Translation)
 x-item={0} Article
 x-items={0} Articles
