--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_hu.properties
@@ -25,7 +25,7 @@ items=Elemek
 metrics=Mérési adatok
 minutes=Perc (Automatic Translation)
 minutes-abbreviation=min (Automatic Translation)
-name=név (Automatic Translation)
+name=Név
 new-sla=Új SLA (Automatic Translation)
 next=Következő
 no-current-metrics=Nincsenek aktuális mérési adatok
