--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_nl.properties
@@ -25,7 +25,7 @@ items=Items
 metrics=Meetwaarden
 minutes=Minutes (Automatic Copy)
 minutes-abbreviation=min (Automatic Copy)
-name=Name (Automatic Copy)
+name=Naam
 new-sla=New SLA (Automatic Copy)
 next=Volgende
 no-current-metrics=Geen huidige meetwaarden
