--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_pt_BR.properties
@@ -25,7 +25,7 @@ items=Itens
 metrics=Métricas
 minutes=Minutos (Automatic Translation)
 minutes-abbreviation=min (Automatic Translation)
-name=Nome (Automatic Translation)
+name=Nome
 new-sla=SLA de novo (Automatic Translation)
 next=Próximo
 no-current-metrics=Nenhuma métrica atual
