--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_sv.properties
@@ -25,7 +25,7 @@ items=Föremål
 metrics=Mätvärden
 minutes=Minutes (Automatic Copy)
 minutes-abbreviation=min (Automatic Copy)
-name=Name (Automatic Copy)
+name=Namn
 new-sla=New SLA (Automatic Copy)
 next=Nästa
 no-current-metrics=Inga nuvarande mätvärden
