--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_zh_CN.properties
@@ -25,7 +25,7 @@ items=项
 metrics=指标
 minutes=分钟 (Automatic Translation)
 minutes-abbreviation=最小值 (Automatic Translation)
-name=名字 (Automatic Translation)
+name=名称
 new-sla=新 SLA (Automatic Translation)
 next=下一个
 no-current-metrics=没有当前指标
