--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_fi.properties
@@ -25,7 +25,7 @@ items=Tuotteet
 metrics=Metriikat
 minutes=Minutes (Automatic Copy)
 minutes-abbreviation=min (Automatic Copy)
-name=Name (Automatic Copy)
+name=Nimi
 new-sla=New SLA (Automatic Copy)
 next=Seuraava
 no-current-metrics=Ei Nykyisiä Metriikoita
