--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_ja.properties
@@ -25,7 +25,7 @@ items=商品
 metrics=統計情報
 minutes=Minutes (Automatic Copy)
 minutes-abbreviation=min (Automatic Copy)
-name=Name (Automatic Copy)
+name=名前
 new-sla=New SLA (Automatic Copy)
 next=次へ
 no-current-metrics=最新統計情報はありません
